// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Kryptos (AKP) export should export b64 1`] = `
{
  "algorithm": "ML-DSA-65",
  "id": "3b9a051f-e1ec-562b-bf92-7cf92ec465ba",
  "privateKey": "MIIP_gIBADALBglghkgBZQMEAxIEgg_qMIIP5gQgSX-SoGL-r_Wdtv5tOqmiORarqSKlyNwcN1TE-OyGVzoEgg_AvDKJevgC4bhyW9vmdaFqMWwA7WeFaB3hnqj3traz4R01EevSSgiwGFFSPqERxUik604Tp3Tf5aBDcTLX6R_RDRIkX_NBUOIKIN1OklOnHgPvraeCXYxwn7Vt4zQjSOtOD8WZ73Ie8GvqAwIHeVbKE1oRTAamCXBumjVny5bCjqsmaCMXAVVnEyZ3BlCBYzJYEUgWckVTBnSHAyVwUXAFgzSDgRYiAkRXYmFYZyAjMmUFAhWEcjEGJkh0hTCIgDIIVwY1BYUEV3Y1ZjCFh3KAYVc3FXBFgmOAYDdAYkFkCIRFGBQUcEJSgwE3cGgTcgFTJ0FISDIiVBGIhhIUJQFWdYJ1ZGFSRUKHCIMQhoYEcQZCgTh3ZjIDhDJhWDMBNgcnEwhYGId3N4EjeGVnRVIgRyZhdYFEaDERVRdGdgM4FmRDAjYGBUZwZ2FUVHcngQFoVHQzBHBWJShAhQB0cSRRMUQVgYaCOHRkMhVjBYFoeAUBNHFDE1FWQBESI2BQJ1dheEgUeCcEMICDVkU0EjFQcDdHIkRUNWNjElMjAhEQI4NUYHE1YlVEeCZlgnQ1UweENWc1cwBIIlIngVdxMSKIY4EAFRFRgnciWBIIgXFGIyQCNURkdzEYWBEiNkEVJgNDE4gGIyAGVBcQR0IEYQIxCFMAVWBxF0gjdFZQhChFSCWIgUJicoNDZGgXcFQnYoiHB1YEhYIDFUBGRhhhAwF0UxIUYwdxNwdxYVZVgzEEZXIYg0c3YEhGAkAXAlFigUNkVHUUBABWI3EnUoEwZnRFInQlQoIWSCiIEUBnRVcCIBdjRYNxV1EVRQFgM4VlFnETIhICJWViBwhkY1aGMjJQMHaHeIdGQBcGIXWAR0YUGFNxZYh3VAhmBYYwJmYidEQEQwIkJmVAM1eEUWd2VmYmGAYFVWJ3YSUiAAh2dYJVV4hGRTd3EkVhgIARBChXSDgWYWNINGUoI1BThENigGQ1EgZUN2YRMARxJiR4NBBCdYFBAkSCAWNIgnQXEQYBRyEleBNmRIZnBkGFJxYlhDQ1ZoYoRHWCYWFoZUNlF2RgA1ZAZ0BEN1MDCAVTYocYZRUHhIc4BFYlgyZHEoGGN4BUSGIDUoYHCFBRd3CAE4OHEmI1QEZjdQUTEjU2OHAEcwYlFiBCQ2UVVkQiEIJgUlQDUiVYEEQEhhJxM0Z1BAJyNHQShSISIBOGFTcCUoV3NgcoBURHV3ZRQCeAaEAhEUBYcmNiNzACESFoFFQ4AIEVdCWBY1E2BgUGSBYDFhRAB0N3ggczJCIoSHNlMoJ0d1cFgwAUYUMkdocVYBVWglKGQxhzB2UVAhZYFCMwAWN3FoR0YIZHRihBFDA1hXEkZ4FkYWdGdFNzFHhhdnVzE1NnE1VoYxMWIiNIE0BFAnVBE3JjhYaFBkgBU4QAhUIANWFlATFnRgR3RXZ1NjiIQoInJUc2VIhwM3hDNzYxIREDBlIjKHVHcERTAXJXMFIBgDNEJFEjEmAoIwgScHAoJ4QRInIjiGMBBmIogGdXhQAQUiaFRyU2NGUBYHERdEdRABEzJjCEQWEzEhBSIwcIhygxg1BYGDEBB3hSdXFzhFM4BiWBSHAxdCVxUkFhKAMYBBR0GGA4Q3eDFXZkNTByBjJkdmYBVINkNkhGBFcWVQQHBhIVGFBAAxRkiHY3IkZAF1CIBBAXVnBUBXKCFlESRYEFY2U1clEDQ1ZRVSYnVzKGOHeIYQNHFTU2iCNDUlNyNVh1gHBVMCNlGEFoSIiFQEREACETdgRXg4dxCIaEAFQnZoQDODNgNnV2cSBDQ2eBgCYTWEZQcoZ1QUGBY0AhBhVgKBYUBWc4hUBgQicGQFNGAFBGYWZIBGYGQSVDEmFliHAgJYcFUChDNlGBcFBQY3YXAiVQZjEwFoUkEnCENiZ2Y3cWYIgWNHhwInGHZXI0WFGIAAdAIQNhFyBCcXBhMYFoMFchRgYwZ1AGIyQmcSiBNHFIJEImNhMREwIQA1AWF1AAAIRzgxF3UnZoZmc3BQKFNwgEJCglYFYQiAIkRFd2QHUWOAYembmUKQZ10mpkIte6EZwOoQkU58KUYX5QG8livPx9kfTglZavVKn44AVnRlUuNEi8MzqzJtr9dfOLtWcd6PW6jYgaAPIEv7xBuaZtVVCCpmASLKcLCzf0j_8ywPMiflr0WrlmkBDAcW9Z6RzHX7Fjbpzc6b_K5_F1ecuyQpzdiDyqjeE6pnrBz3Yze44jrsZk8uREhQwCQAR0P1sjLxJTKscQ9T8yt73ASXRqsgS7-2Ear9KnBzzXUFQDdiwylb76dCcoC_FXfdImnf0g9M3Q0HaNgrmIt7vDn2c7BVfvFAfZx98qB1XndoZaS3zUHsESxbJJAYQ0dsXKVtQVOaSAA_RHRGMnfvxs9otr-vVcs6IQrd97q2X1UyLNUjYq925qzQTgaReOosq4bAPHt1UOJhsDnK90CUgyiWMeG1yxROao22Sgo593hBQbGrsJJGGykUfpOpkppJ9t0P2wVOkbpdsWo5lc0PVEnCcYahCtCSUly5a4i0D0XBL8sDhVI8MJPuHyeBqAaIIb8q9pzT7jAsEWy1I-s8gQQC_DIQmOwEyFXmaELgAX6LjlSP5dVnvHvtlBo-qDE8ir41rMJr3_d_i7WPD05A_MhUURqGgYkZQ6grDUrpZMa8qU-msh14iK3i7SAwPw6m6uwtUar5Lko4akMqR8h4jc4ZlLR1IjYbB8E1lFKtaJ5NMYwDDYxdGbirtexegzurcytZPzYMxqPPjzWrxAbSzfys3Zaqr_Zi6cHr9p-6vsL7Nu0jZJ49N79NQ9Jt9uH8k4uyKYlCMQK5TaJePTkYp72WA-j9_b2O4NqNir_HNVIQ8UYAtkzYcIIPGEGYcySWBoq9n0_SVXe_Qw-WwCZyWMZWNn_6_EqAhT1wU4ye3-gM45V9rmnxCVBzSqUCUlZ-qWAQ7YCgv93RBH_uAm5WwmB-fLBYQDqM3h2WrTxgTUCITD7MqIum5idyaaJ2CBYj5RCyRgGyGlQhj-U0WArwv4XSSZz8Nkgua690_cucLnP9qfOZTD2g2gnnJMC5AIzlo7jgA5wB0gkDnrye8QdpQLtEMvgixf5FMMMJwFJZM8WlfxuG_bxLZoiC0974GFMTM1ohSWKLKRLsKI_9EjO8EJNegwvYBV--kV0YvD2eLETdQJEHvpkdpMxTLaBLyEiSd_mHVqit3G8cQvgyHhhd1oXNTpP-mOJYXR1Pp7TU4ZfKybUuuOqXFwVZjxeBoys04Qc4xw-SuMeu84oJxTR3mapUX5h3vtbhq_Jjj2YXBbTNPpIk4i4W9Ucw_C87l_89LFTiyTchFbbJepndHu6KWQ9KjzrV2FeuKoYv9aDSiH9bkY_eP9ozdJmendhQjY5KZgzQdRQOWC24jsBTK5zZDXebi4UAoEMRJ5yrH5Bk9f8b_yasSj3ULvmrZawqzY-8XqmptW3IrZGn3eAJ2jnVHWQB-dOa-GBN4YrzzeqLQ_NyPe7F5y7FLdXU9ymxSzsVa7M8nLejH2RKSAyMs7H9jrFbP4hvSgG8owO2IhdzzHi_zj47yKl66Sj_QbmNm-jtiJ7gTXFYiB6t7wv0Xl-B-nMR2R3J7zggJqbzlhmLow5LHMIso6izo_K32-gSS89bJ33kts7umgjRK7jXcIRDeTeK2QOQS-9GUcVX94V47Maz4Q3YXvLKbeWxx3y9MZ2WVXwq4P3SpP2SRfA4gRVSJAcMHJjnPq1y6A_rVefdR5Qxd4OoafiGCLBNNHkp2FncVvVBdy5p8KyBBZHVEVozTtR8u3WuJplI_n81ik4_v4zpj5DD-chIYg6MvMa_3aQfi97vZE9O8ThnU3yle7YwNhMJZKKKVdg-pLO0-RZCfTI-bqwHI45eqX10qdXQygUQAE9kp6nq2Sn9zw4L4FrBI4q7uRGfoRyr9b2Eo4_EdMa1qyLKeDgv74JzTLmkU0N0qAQ_5rQY5Y8PT4WzQqrRCMYIt5Uea4TcJbeJcM6ucj_iV3Ep36an2tTv3a7GkoJQ5OlD4QDcgoTRgOmHtbq5ncQFuqzUFee8FI_DCdkmKW7fRWvfnCYBEnlR0sb2bh4Gqcvz6c2ZMglBEmEENqgXZBAXJSBqbPHxPvUButP9qReiQAKe7xt0j5o8avQZhgnBK5WOHoWJEeIHBZuLDncp7fjjqSsSkOVoxSHCEDhxx6PT5ogEUDMq5YqLpHhcky5eYFqxHfrQ6MgC1R5vKxwfPkeqlePND2CcFM0yWeS-Sy8US4lEMJHYwSKjlw1I1QWTem2GllrlzQFTgZ2jSXHRzqUTC11pxlMkujJA2IbeLY_nrJ3GSTMshH2X0g0o9MZhVN3QDrKC2y9re3CgVnNLtt12Mx_et-d6LmltAMZKk1FO-Kr3d7fuQER-cX0Chh_pkBqdLg3f9MR2mN2_giVpOA2AdCcOrWRj2DtWgY8VgFGF_F5kE1aasrdjdTbR3RW1hRBhnw5BjuIo3CuG5C6f7sKS-SEccXDBttTRsZClroIOxq7m5Vu5a-Gfsvp8azUxmArDDJzuJ5vvyBjRbrSJs2MPVjK3nzXXnHP66BhV3U2Yaz-H1bvwrJF2IqjJsNCKJJum1IM3RVl35C0hoyieVKL_3_D1p7Hset9E9TvRioFIy5icFm83DNvoCPyiMYoR69yYkTz77TEqJ3uTrpGC-esmQPXd-8q0Z4ONkTz9g6zfr-CwMHQWfecXLFmtZhY7hUzwNPYqJ0UcGcHJ5nTm_xX35UJ_0ssibxp8x3_8KjclkFjUScP19AZtqkFyLoCiPOuMv02Hav9VdOmPDrjN7lxFqQoZXuVkAWQCLzG1oRqJKGGNK7kqCFyBDJdq1YVve-aY8L2vcfv50dfuyahxtZG5-x_Bgpdd7MWL_lB3wV5BIM1Yrqvu5C5hGWMt3aoqL3Pd7vXwVB1yNhQWdE1xErspPumVSHBl_PKi33w1WlgutRdPtPoJRUKnPpulEO3Zge2v8z0ETnYqdstWB3ULxOfMwUUdVmRJzfLxkofKkrOwFAnkZlqsLSziFIyx1zvek52Y4qUQ9Y18Dnp-lZlXvYzq7-7cFn0TPBCfogoU6O6Hhmt2-cArRca4CFxpjTc8CR0cUUfkVNg5Q0Kp385XwNLantN3ax2q7AevB1ceDxufOC-WYsdd2m3Odg2dISTdwx8L4-hH2tZdbu_iow4fumc8SkZy4M-XZxZE1B79m_mz6IrDc-b79MOTQszbZw_g0_TTJa4En0FgGn0Y98uqdGlghBqs6lXVHCI2B_Cr9j8efQwRmO0N5JR4eDjjxyjAH5OTS21T7Gc6_DzFtf2V5MZlpcLlNPWkzeGtLZ_VQuonOtxTAY",
  "publicKey": "MIIHsjALBglghkgBZQMEAxIDggehALwyiXr4AuG4clvb5nWhajFsAO1nhWgd4Z6o97a2s-Eda-IdckZsw7CtLB_96c7d6tM12NTp66ozUiu1pzAZrtGgl8ksjkI_rqyExCLWGWyDrGQlLL142mmA2K47QhXSaelro5VSO8EIgvHRjKlShC99Y198efajp0qQEQQVzKU3Lv4KH5Iw7K0zEgDEGDiS0ULfZ9v-jFHVW9cveCfiwWyHV8YQIRbrth0fKOK3aiVuXyV3NmZznQrzhCmNgCKIClm6BymyCZxv--tz-QghNUWhEcFofo4cqbl2oWtm0yEouNN5N4V4A-j42cS8f9Gd7rlELT_srukq9EC7bbYLiMib2hSKvGSeqpY9LuWN5GANGJ1DopDd7PnPooD6Js_D7Fb9flyUHlrtmYciH6Iuk3IPZL9ZR43ApYTJTuCiTVlPxMRsq4eroM6NPnq8-r79Fk-vc7XQtRZDU0OIIz9l_-7J2kkw4HKW3gpNoFhsuTR9gZYi6QC0g3WSv-Tf2AWrNEjhHGt7BkNig1rytura64s663GtDW38OM764-xBP4tjAX3GKwMORFfVDmQzLC8j5vx-tEd4Zgm8UIX2lWIiFpUwy2Ojb5URHIjrHn9-Ii7M_56_j18JcQuKDsgY_eKhyWrkG4DmjzEyzBWtSmTME26NB9-GVwAvt8COn970Q-qRZfbSbMqMwiUF_7yAKfYsyfutdG0BzS3u_SFO4f4aVPQqxUYtteV4LmQ0KivHhBQlXhjJrPvJ903aOa2XE1hfpJr5bnKBIonvhVo4PdbQq8lKb7DArikbXfQrgR90OWobpE2IFYo4GvzABFmLfbCVb3nsVQuBIzNff1ASlY3ZVI2Z6K5hLIUqapNYwJHi_SMJPMLcsboI-Azf4E1dS_rS5Qoo1u3NbfTnbqJnxZGF3t6oPN82FMdQVLoSFBADWzVKDc2jY8ZkaimuFV0KL1X0lOi1LqisuUu8sv2CQ5WhATEshOiU7REmk0-EyvYO_uEcVoCGcR6FNtXC16NxIAZEyT9c8mgn-Q2eO6Kbwq6wJrRoyU2zoUR_PVqRRhRibtPBXjsNHvWAtRpZiSizMSYDJXtr-87X1nq0w_LLP0npXRH0r1nQEsKD39DXb5Jc-kbKZ3x9gl3QNawPzSZwvl1O2ZL3TWeUkkS1uapQmN98QTkhlW8-ZG2OfEciXpEk2lIDDJH0GQLQiclEEHBMAM9NndEync7rGO4al_EGD0lP2-RWUS6D2NJ1sxOo4teAECZPWSD6Dx_3l7uNUb6eliVhJ2nENVPyAehTCrwDwqhZkKLS7_7y3Lz0jJfk11hG0uFkE6-5uHUE9LdB2vJsBlLDPTYdDsLRs2rdllIxi4MuZsvclVI3FQ-R84VaQ-Ur2CQnTtf9rU95NL7KabKMuu7Je_LFPDx38RRWWHqTXDTUbHd4OHIGGaa2qCFL79Nl79Imfoo0iTJHhPlq9fRR7w-s2ufiIBQbq4sMmiAPel_mxc2PrIgSKRQ1VcSqIv52Hn_O906Wj2hFeDs5rZYkPKA2tVA_i7X89cesfyeskYzwxpQKu2dRC-IvgXccJ7RqmmYYaHiQmCIeARDzM6Bmy6OVXvUoOdBEJKnCDtvAOf5v4VCV8r-9eVDe_SrDAoz0EqOlCWepYYFU8BEzAi3i32CSTBD4etwzcMgpTQVIHYCrXzlbB6IXxQS9SEXZORYKzlGrPRs4MdnJIjYjd3YYC6XykeMuV21nK0fRlRA68u_db6-2HFeMQ5bcOWXN7HQb09CsUjrNMoiIx1Za9Rfr0J6ZaDAEPkfZ2PeHzHIRAbDTusEDYhfbQYX3Q8jsLp3GnVGcsX1aJDImti2PyOf4izDi01u1PbCYI0o63CDZwRzGq854GVMEyyNyY1VjBpG2SLFNvoJvApWZ4OOGVQmiYwzTtNnOQgZFUwYTi-3Pj2OMeFZ2cg8WoBiPhv2Esg7YuwNcrOsM1_4Gxwhomr2C0jQp0soy0O6CZ5Wi1yQAH3Zj4fWEbIziMBkU4FW_DT7D3WfxNYzNIQTRaUwG4aH0eAUEwsDgVgUS_m6oqEm_joEvMCaRQ_pf0kl1i5dg8cfsarg0TAKfiGtfaUtY2YZuja2Bc1S3s1P5H_ohoyf8s7zfIDTPB2KlK1hKradGxSLTjDWpcFsVwo98uffES1tBzkxXiSE3MOgZUWV8RMvY7tEDO7rDpysJLxjS-GALDHAGHGomfHsBP6l_M6Gvc0zdqeMZ81pXbkPhdznhygvZUtjokC76Nh_6OVwYrJKXbMOXdv-QjWxyn56sapkKhr3spUswj1-6SFy_BAv6la3ZqFQ8acQTORLBi_C_C7JLoUe-h5kYW0SvH63TqboF8Oku7TAVlBMg0b_984o6TJiJBjKZg4LVlZGovGvD7WRwR1m-zI1LNyrQHblGxcK46oZZhT-n3aYCKwl28pqw8xN9_511uHRK66WizvsNb-6Bw1QhYM6QAFA7szWLB8pmhLGt2tmnPYSUb5e6ESdxwoanhSV5t55GhBCDxmjCH9a3-lHR5skOoa-huxN61-ZXHUrIdOuhIh6QvbtLNtxY8r8Ag_HREy5S5lLIloFmJpDNQ9jSCkTE",
  "type": "AKP",
  "use": "sig",
}
`;

exports[`Kryptos (AKP) export should export der 1`] = `
{
  "algorithm": "ML-DSA-65",
  "id": "3b9a051f-e1ec-562b-bf92-7cf92ec465ba",
  "privateKey": {
    "data": [
      48,
      130,
      15,
      254,
      2,
      1,
      0,
      48,
      11,
      6,
      9,
      96,
      134,
      72,
      1,
      101,
      3,
      4,
      3,
      18,
      4,
      130,
      15,
      234,
      48,
      130,
      15,
      230,
      4,
      32,
      73,
      127,
      146,
      160,
      98,
      254,
      175,
      245,
      157,
      182,
      254,
      109,
      58,
      169,
      162,
      57,
      22,
      171,
      169,
      34,
      165,
      200,
      220,
      28,
      55,
      84,
      196,
      248,
      236,
      134,
      87,
      58,
      4,
      130,
      15,
      192,
      188,
      50,
      137,
      122,
      248,
      2,
      225,
      184,
      114,
      91,
      219,
      230,
      117,
      161,
      106,
      49,
      108,
      0,
      237,
      103,
      133,
      104,
      29,
      225,
      158,
      168,
      247,
      182,
      182,
      179,
      225,
      29,
      53,
      17,
      235,
      210,
      74,
      8,
      176,
      24,
      81,
      82,
      62,
      161,
      17,
      197,
      72,
      164,
      235,
      78,
      19,
      167,
      116,
      223,
      229,
      160,
      67,
      113,
      50,
      215,
      233,
      31,
      209,
      13,
      18,
      36,
      95,
      243,
      65,
      80,
      226,
      10,
      32,
      221,
      78,
      146,
      83,
      167,
      30,
      3,
      239,
      173,
      167,
      130,
      93,
      140,
      112,
      159,
      181,
      109,
      227,
      52,
      35,
      72,
      235,
      78,
      15,
      197,
      153,
      239,
      114,
      30,
      240,
      107,
      234,
      3,
      2,
      7,
      121,
      86,
      202,
      19,
      90,
      17,
      76,
      6,
      166,
      9,
      112,
      110,
      154,
      53,
      103,
      203,
      150,
      194,
      142,
      171,
      38,
      104,
      35,
      23,
      1,
      85,
      103,
      19,
      38,
      119,
      6,
      80,
      129,
      99,
      50,
      88,
      17,
      72,
      22,
      114,
      69,
      83,
      6,
      116,
      135,
      3,
      37,
      112,
      81,
      112,
      5,
      131,
      52,
      131,
      129,
      22,
      34,
      2,
      68,
      87,
      98,
      97,
      88,
      103,
      32,
      35,
      50,
      101,
      5,
      2,
      21,
      132,
      114,
      49,
      6,
      38,
      72,
      116,
      133,
      48,
      136,
      128,
      50,
      8,
      87,
      6,
      53,
      5,
      133,
      4,
      87,
      118,
      53,
      102,
      48,
      133,
      135,
      114,
      128,
      97,
      87,
      55,
      21,
      112,
      69,
      130,
      99,
      128,
      96,
      55,
      64,
      98,
      65,
      100,
      8,
      132,
      69,
      24,
      20,
      20,
      112,
      66,
      82,
      131,
      1,
      55,
      112,
      104,
      19,
      114,
      1,
      83,
      39,
      65,
      72,
      72,
      50,
      34,
      84,
      17,
      136,
      134,
      18,
      20,
      37,
      1,
      86,
      117,
      130,
      117,
      100,
      97,
      82,
      69,
      66,
      135,
      8,
      131,
      16,
      134,
      134,
      4,
      113,
      6,
      66,
      129,
      56,
      119,
      102,
      50,
      3,
      132,
      50,
      97,
      88,
      51,
      1,
      54,
      7,
      39,
      19,
      8,
      88,
      24,
      135,
      119,
      55,
      129,
      35,
      120,
      101,
      103,
      69,
      82,
      32,
      71,
      38,
      97,
      117,
      129,
      68,
      104,
      49,
      17,
      85,
      23,
      70,
      118,
      3,
      56,
      22,
      100,
      67,
      2,
      54,
      6,
      5,
      70,
      112,
      103,
      97,
      84,
      84,
      119,
      39,
      129,
      1,
      104,
      84,
      116,
      51,
      4,
      112,
      86,
      37,
      40,
      64,
      133,
      0,
      116,
      113,
      36,
      81,
      49,
      68,
      21,
      129,
      134,
      130,
      56,
      116,
      100,
      50,
      21,
      99,
      5,
      129,
      104,
      120,
      5,
      1,
      52,
      113,
      67,
      19,
      81,
      86,
      64,
      17,
      18,
      35,
      96,
      80,
      39,
      87,
      97,
      120,
      72,
      20,
      120,
      39,
      4,
      48,
      128,
      131,
      86,
      69,
      52,
      18,
      49,
      80,
      112,
      55,
      71,
      34,
      68,
      84,
      53,
      99,
      99,
      18,
      83,
      35,
      2,
      17,
      16,
      35,
      131,
      84,
      96,
      113,
      53,
      98,
      85,
      68,
      120,
      38,
      101,
      130,
      116,
      53,
      83,
      7,
      132,
      53,
      103,
      53,
      115,
      0,
      72,
      34,
      82,
      39,
      129,
      87,
      113,
      49,
      34,
      136,
      99,
      129,
      0,
      21,
      17,
      81,
      130,
      119,
      34,
      88,
      18,
      8,
      129,
      113,
      70,
      35,
      36,
      2,
      53,
      68,
      100,
      119,
      49,
      24,
      88,
      17,
      34,
      54,
      65,
      21,
      38,
      3,
      67,
      19,
      136,
      6,
      35,
      32,
      6,
      84,
      23,
      16,
      71,
      66,
      4,
      97,
      2,
      49,
      8,
      83,
      0,
      85,
      96,
      113,
      23,
      72,
      35,
      116,
      86,
      80,
      132,
      40,
      69,
      72,
      37,
      136,
      129,
      66,
      98,
      114,
      131,
      67,
      100,
      104,
      23,
      112,
      84,
      39,
      98,
      136,
      135,
      7,
      86,
      4,
      133,
      130,
      3,
      21,
      64,
      70,
      70,
      24,
      97,
      3,
      1,
      116,
      83,
      18,
      20,
      99,
      7,
      113,
      55,
      7,
      113,
      97,
      86,
      85,
      131,
      49,
      4,
      101,
      114,
      24,
      131,
      71,
      55,
      96,
      72,
      70,
      2,
      64,
      23,
      2,
      81,
      98,
      129,
      67,
      100,
      84,
      117,
      20,
      4,
      0,
      86,
      35,
      113,
      39,
      82,
      129,
      48,
      102,
      116,
      69,
      34,
      116,
      37,
      66,
      130,
      22,
      72,
      40,
      136,
      17,
      64,
      103,
      69,
      87,
      2,
      32,
      23,
      99,
      69,
      131,
      113,
      87,
      81,
      21,
      69,
      1,
      96,
      51,
      133,
      101,
      22,
      113,
      19,
      34,
      18,
      2,
      37,
      101,
      98,
      7,
      8,
      100,
      99,
      86,
      134,
      50,
      50,
      80,
      48,
      118,
      135,
      120,
      135,
      70,
      64,
      23,
      6,
      33,
      117,
      128,
      71,
      70,
      20,
      24,
      83,
      113,
      101,
      136,
      119,
      84,
      8,
      102,
      5,
      134,
      48,
      38,
      102,
      34,
      116,
      68,
      4,
      67,
      2,
      36,
      38,
      101,
      64,
      51,
      87,
      132,
      81,
      103,
      118,
      86,
      102,
      38,
      24,
      6,
      5,
      85,
      98,
      119,
      97,
      37,
      34,
      0,
      8,
      118,
      117,
      130,
      85,
      87,
      136,
      70,
      69,
      55,
      119,
      18,
      69,
      97,
      128,
      128,
      17,
      4,
      40,
      87,
      72,
      56,
      22,
      97,
      99,
      72,
      52,
      101,
      40,
      35,
      80,
      83,
      132,
      67,
      98,
      128,
      100,
      53,
      18,
      6,
      84,
      55,
      102,
      17,
      48,
      4,
      113,
      38,
      36,
      120,
      52,
      16,
      66,
      117,
      129,
      65,
      2,
      68,
      130,
      1,
      99,
      72,
      130,
      116,
      23,
      17,
      6,
      1,
      71,
      33,
      37,
      120,
      19,
      102,
      68,
      134,
      103,
      6,
      65,
      133,
      39,
      22,
      37,
      132,
      52,
      53,
      102,
      134,
      40,
      68,
      117,
      130,
      97,
      97,
      104,
      101,
      67,
      101,
      23,
      100,
      96,
      3,
      86,
      64,
      103,
      64,
      68,
      55,
      83,
      3,
      8,
      5,
      83,
      98,
      135,
      24,
      101,
      21,
      7,
      132,
      135,
      56,
      4,
      86,
      37,
      131,
      38,
      71,
      18,
      129,
      134,
      55,
      128,
      84,
      72,
      98,
      3,
      82,
      134,
      7,
      8,
      80,
      81,
      119,
      112,
      128,
      19,
      131,
      135,
      18,
      98,
      53,
      64,
      70,
      99,
      117,
      5,
      19,
      18,
      53,
      54,
      56,
      112,
      4,
      115,
      6,
      37,
      22,
      32,
      66,
      67,
      101,
      21,
      86,
      68,
      34,
      16,
      130,
      96,
      82,
      84,
      3,
      82,
      37,
      88,
      16,
      68,
      4,
      134,
      18,
      113,
      51,
      70,
      117,
      4,
      2,
      114,
      52,
      116,
      18,
      133,
      34,
      18,
      32,
      19,
      134,
      21,
      55,
      2,
      82,
      133,
      119,
      54,
      7,
      40,
      5,
      68,
      71,
      87,
      118,
      81,
      64,
      39,
      128,
      104,
      64,
      33,
      17,
      64,
      88,
      114,
      99,
      98,
      55,
      48,
      2,
      17,
      33,
      104,
      20,
      84,
      56,
      0,
      129,
      21,
      116,
      37,
      129,
      99,
      81,
      54,
      6,
      5,
      6,
      72,
      22,
      3,
      22,
      20,
      64,
      7,
      67,
      119,
      130,
      7,
      51,
      36,
      34,
      40,
      72,
      115,
      101,
      50,
      130,
      116,
      119,
      87,
      5,
      131,
      0,
      20,
      97,
      67,
      36,
      118,
      135,
      21,
      96,
      21,
      86,
      130,
      82,
      134,
      67,
      24,
      115,
      7,
      101,
      21,
      2,
      22,
      88,
      20,
      35,
      48,
      1,
      99,
      119,
      22,
      132,
      116,
      96,
      134,
      71,
      70,
      40,
      65,
      20,
      48,
      53,
      133,
      113,
      36,
      103,
      129,
      100,
      97,
      103,
      70,
      116,
      83,
      115,
      20,
      120,
      97,
      118,
      117,
      115,
      19,
      83,
      103,
      19,
      85,
      104,
      99,
      19,
      22,
      34,
      35,
      72,
      19,
      64,
      69,
      2,
      117,
      65,
      19,
      114,
      99,
      133,
      134,
      133,
      6,
      72,
      1,
      83,
      132,
      0,
      133,
      66,
      0,
      53,
      97,
      101,
      1,
      49,
      103,
      70,
      4,
      119,
      69,
      118,
      117,
      54,
      56,
      136,
      66,
      130,
      39,
      37,
      71,
      54,
      84,
      136,
      112,
      51,
      120,
      67,
      55,
      54,
      49,
      33,
      17,
      3,
      6,
      82,
      35,
      40,
      117,
      71,
      112,
      68,
      83,
      1,
      114,
      87,
      48,
      82,
      1,
      128,
      51,
      68,
      36,
      81,
      35,
      18,
      96,
      40,
      35,
      8,
      18,
      112,
      112,
      40,
      39,
      132,
      17,
      34,
      114,
      35,
      136,
      99,
      1,
      6,
      98,
      40,
      128,
      103,
      87,
      133,
      0,
      16,
      82,
      38,
      133,
      71,
      37,
      54,
      52,
      101,
      1,
      96,
      113,
      17,
      116,
      71,
      81,
      0,
      17,
      51,
      38,
      48,
      132,
      65,
      97,
      51,
      18,
      16,
      82,
      35,
      7,
      8,
      135,
      40,
      49,
      131,
      80,
      88,
      24,
      49,
      1,
      7,
      120,
      82,
      117,
      113,
      115,
      132,
      83,
      56,
      6,
      37,
      129,
      72,
      112,
      49,
      116,
      37,
      113,
      82,
      65,
      97,
      40,
      3,
      24,
      4,
      20,
      116,
      24,
      96,
      56,
      67,
      119,
      131,
      21,
      118,
      100,
      53,
      48,
      114,
      6,
      50,
      100,
      118,
      102,
      1,
      84,
      131,
      100,
      54,
      72,
      70,
      4,
      87,
      22,
      85,
      4,
      7,
      6,
      18,
      21,
      24,
      80,
      64,
      3,
      20,
      100,
      136,
      118,
      55,
      34,
      70,
      64,
      23,
      80,
      136,
      4,
      16,
      23,
      86,
      112,
      84,
      5,
      114,
      130,
      22,
      81,
      18,
      69,
      129,
      5,
      99,
      101,
      53,
      114,
      81,
      3,
      67,
      86,
      81,
      85,
      38,
      39,
      87,
      50,
      134,
      56,
      119,
      136,
      97,
      3,
      71,
      21,
      53,
      54,
      136,
      35,
      67,
      82,
      83,
      114,
      53,
      88,
      117,
      128,
      112,
      85,
      48,
      35,
      101,
      24,
      65,
      104,
      72,
      136,
      133,
      64,
      68,
      68,
      0,
      33,
      19,
      118,
      4,
      87,
      131,
      135,
      113,
      8,
      134,
      132,
      0,
      84,
      39,
      102,
      132,
      3,
      56,
      51,
      96,
      54,
      117,
      118,
      113,
      32,
      67,
      67,
      103,
      129,
      128,
      38,
      19,
      88,
      70,
      80,
      114,
      134,
      117,
      65,
      65,
      129,
      99,
      64,
      33,
      6,
      21,
      96,
      40,
      22,
      20,
      5,
      103,
      56,
      133,
      64,
      96,
      66,
      39,
      6,
      64,
      83,
      70,
      0,
      80,
      70,
      97,
      102,
      72,
      4,
      102,
      6,
      65,
      37,
      67,
      18,
      97,
      101,
      136,
      112,
      32,
      37,
      135,
      5,
      80,
      40,
      67,
      54,
      81,
      129,
      112,
      80,
      80,
      99,
      118,
      23,
      2,
      37,
      80,
      102,
      49,
      48,
      22,
      133,
      36,
      18,
      112,
      132,
      54,
      38,
      118,
      99,
      119,
      22,
      96,
      136,
      22,
      52,
      120,
      112,
      34,
      113,
      135,
      101,
      114,
      52,
      88,
      81,
      136,
      0,
      7,
      64,
      33,
      3,
      97,
      23,
      32,
      66,
      113,
      112,
      97,
      49,
      129,
      104,
      48,
      87,
      33,
      70,
      6,
      48,
      103,
      80,
      6,
      35,
      36,
      38,
      113,
      40,
      129,
      52,
      113,
      72,
      36,
      66,
      38,
      54,
      19,
      17,
      19,
      2,
      16,
      3,
      80,
      22,
      23,
      80,
      0,
      0,
      132,
      115,
      131,
      17,
      119,
      82,
      118,
      104,
      102,
      103,
      55,
      5,
      2,
      133,
      55,
      8,
      4,
      36,
      40,
      37,
      96,
      86,
      16,
      136,
      2,
      36,
      68,
      87,
      118,
      64,
      117,
      22,
      56,
      6,
      30,
      153,
      185,
      148,
      41,
      6,
      117,
      210,
      106,
      100,
      34,
      215,
      186,
      17,
      156,
      14,
      161,
      9,
      20,
      231,
      194,
      148,
      97,
      126,
      80,
      27,
      201,
      98,
      188,
      252,
      125,
      145,
      244,
      224,
      149,
      150,
      175,
      84,
      169,
      248,
      224,
      5,
      103,
      70,
      85,
      46,
      52,
      72,
      188,
      51,
      58,
      179,
      38,
      218,
      253,
      117,
      243,
      139,
      181,
      103,
      29,
      232,
      245,
      186,
      141,
      136,
      26,
      0,
      242,
      4,
      191,
      188,
      65,
      185,
      166,
      109,
      85,
      80,
      130,
      166,
      96,
      18,
      44,
      167,
      11,
      11,
      55,
      244,
      143,
      255,
      50,
      192,
      243,
      34,
      126,
      90,
      244,
      90,
      185,
      102,
      144,
      16,
      192,
      113,
      111,
      89,
      233,
      28,
      199,
      95,
      177,
      99,
      110,
      156,
      220,
      233,
      191,
      202,
      231,
      241,
      117,
      121,
      203,
      178,
      66,
      156,
      221,
      136,
      60,
      170,
      141,
      225,
      58,
      166,
      122,
      193,
      207,
      118,
      51,
      123,
      142,
      35,
      174,
      198,
      100,
      242,
      228,
      68,
      133,
      12,
      2,
      64,
      4,
      116,
      63,
      91,
      35,
      47,
      18,
      83,
      42,
      199,
      16,
      245,
      63,
      50,
      183,
      189,
      192,
      73,
      116,
      106,
      178,
      4,
      187,
      251,
      97,
      26,
      175,
      210,
      167,
      7,
      60,
      215,
      80,
      84,
      3,
      118,
      44,
      50,
      149,
      190,
      250,
      116,
      39,
      40,
      11,
      241,
      87,
      125,
      210,
      38,
      157,
      253,
      32,
      244,
      205,
      208,
      208,
      118,
      141,
      130,
      185,
      136,
      183,
      187,
      195,
      159,
      103,
      59,
      5,
      87,
      239,
      20,
      7,
      217,
      199,
      223,
      42,
      7,
      85,
      231,
      118,
      134,
      90,
      75,
      124,
      212,
      30,
      193,
      18,
      197,
      178,
      73,
      1,
      132,
      52,
      118,
      197,
      202,
      86,
      212,
      21,
      57,
      164,
      128,
      3,
      244,
      71,
      68,
      99,
      39,
      126,
      252,
      108,
      246,
      139,
      107,
      250,
      245,
      92,
      179,
      162,
      16,
      173,
      223,
      123,
      171,
      101,
      245,
      83,
      34,
      205,
      82,
      54,
      42,
      247,
      110,
      106,
      205,
      4,
      224,
      105,
      23,
      142,
      162,
      202,
      184,
      108,
      3,
      199,
      183,
      85,
      14,
      38,
      27,
      3,
      156,
      175,
      116,
      9,
      72,
      50,
      137,
      99,
      30,
      27,
      92,
      177,
      68,
      230,
      168,
      219,
      100,
      160,
      163,
      159,
      119,
      132,
      20,
      27,
      26,
      187,
      9,
      36,
      97,
      178,
      145,
      71,
      233,
      58,
      153,
      41,
      164,
      159,
      109,
      208,
      253,
      176,
      84,
      233,
      27,
      165,
      219,
      22,
      163,
      153,
      92,
      208,
      245,
      68,
      156,
      39,
      24,
      106,
      16,
      173,
      9,
      37,
      37,
      203,
      150,
      184,
      139,
      64,
      244,
      92,
      18,
      252,
      176,
      56,
      85,
      35,
      195,
      9,
      62,
      225,
      242,
      120,
      26,
      128,
      104,
      130,
      27,
      242,
      175,
      105,
      205,
      62,
      227,
      2,
      193,
      22,
      203,
      82,
      62,
      179,
      200,
      16,
      64,
      47,
      195,
      33,
      9,
      142,
      192,
      76,
      133,
      94,
      102,
      132,
      46,
      0,
      23,
      232,
      184,
      229,
      72,
      254,
      93,
      86,
      123,
      199,
      190,
      217,
      65,
      163,
      234,
      131,
      19,
      200,
      171,
      227,
      90,
      204,
      38,
      189,
      255,
      119,
      248,
      187,
      88,
      240,
      244,
      228,
      15,
      204,
      133,
      69,
      17,
      168,
      104,
      24,
      145,
      148,
      58,
      130,
      176,
      212,
      174,
      150,
      76,
      107,
      202,
      148,
      250,
      107,
      33,
      215,
      136,
      138,
      222,
      46,
      210,
      3,
      3,
      240,
      234,
      110,
      174,
      194,
      213,
      26,
      175,
      146,
      228,
      163,
      134,
      164,
      50,
      164,
      124,
      135,
      136,
      220,
      225,
      153,
      75,
      71,
      82,
      35,
      97,
      176,
      124,
      19,
      89,
      69,
      42,
      214,
      137,
      228,
      211,
      24,
      192,
      48,
      216,
      197,
      209,
      155,
      138,
      187,
      94,
      197,
      232,
      51,
      186,
      183,
      50,
      181,
      147,
      243,
      96,
      204,
      106,
      60,
      248,
      243,
      90,
      188,
      64,
      109,
      44,
      223,
      202,
      205,
      217,
      106,
      170,
      255,
      102,
      46,
      156,
      30,
      191,
      105,
      251,
      171,
      236,
      47,
      179,
      110,
      210,
      54,
      73,
      227,
      211,
      123,
      244,
      212,
      61,
      38,
      223,
      110,
      31,
      201,
      56,
      187,
      34,
      152,
      148,
      35,
      16,
      43,
      148,
      218,
      37,
      227,
      211,
      145,
      138,
      123,
      217,
      96,
      62,
      143,
      223,
      219,
      216,
      238,
      13,
      168,
      216,
      171,
      252,
      115,
      85,
      33,
      15,
      20,
      96,
      11,
      100,
      205,
      135,
      8,
      32,
      241,
      132,
      25,
      135,
      50,
      73,
      96,
      104,
      171,
      217,
      244,
      253,
      37,
      87,
      123,
      244,
      48,
      249,
      108,
      2,
      103,
      37,
      140,
      101,
      99,
      103,
      255,
      175,
      196,
      168,
      8,
      83,
      215,
      5,
      56,
      201,
      237,
      254,
      128,
      206,
      57,
      87,
      218,
      230,
      159,
      16,
      149,
      7,
      52,
      170,
      80,
      37,
      37,
      103,
      234,
      150,
      1,
      14,
      216,
      10,
      11,
      253,
      221,
      16,
      71,
      254,
      224,
      38,
      229,
      108,
      38,
      7,
      231,
      203,
      5,
      132,
      3,
      168,
      205,
      225,
      217,
      106,
      211,
      198,
      4,
      212,
      8,
      132,
      195,
      236,
      202,
      136,
      186,
      110,
      98,
      119,
      38,
      154,
      39,
      96,
      129,
      98,
      62,
      81,
      11,
      36,
      96,
      27,
      33,
      165,
      66,
      24,
      254,
      83,
      69,
      128,
      175,
      11,
      248,
      93,
      36,
      153,
      207,
      195,
      100,
      130,
      230,
      186,
      247,
      79,
      220,
      185,
      194,
      231,
      63,
      218,
      159,
      57,
      148,
      195,
      218,
      13,
      160,
      158,
      114,
      76,
      11,
      144,
      8,
      206,
      90,
      59,
      142,
      0,
      57,
      192,
      29,
      32,
      144,
      57,
      235,
      201,
      239,
      16,
      118,
      148,
      11,
      180,
      67,
      47,
      130,
      44,
      95,
      228,
      83,
      12,
      48,
      156,
      5,
      37,
      147,
      60,
      90,
      87,
      241,
      184,
      111,
      219,
      196,
      182,
      104,
      136,
      45,
      61,
      239,
      129,
      133,
      49,
      51,
      53,
      162,
      20,
      150,
      40,
      178,
      145,
      46,
      194,
      136,
      255,
      209,
      35,
      59,
      193,
      9,
      53,
      232,
      48,
      189,
      128,
      85,
      251,
      233,
      21,
      209,
      139,
      195,
      217,
      226,
      196,
      77,
      212,
      9,
      16,
      123,
      233,
      145,
      218,
      76,
      197,
      50,
      218,
      4,
      188,
      132,
      137,
      39,
      127,
      152,
      117,
      106,
      138,
      221,
      198,
      241,
      196,
      47,
      131,
      33,
      225,
      133,
      221,
      104,
      92,
      212,
      233,
      63,
      233,
      142,
      37,
      133,
      209,
      212,
      250,
      123,
      77,
      78,
      25,
      124,
      172,
      155,
      82,
      235,
      142,
      169,
      113,
      112,
      85,
      152,
      241,
      120,
      26,
      50,
      179,
      78,
      16,
      115,
      140,
      112,
      249,
      43,
      140,
      122,
      239,
      56,
      160,
      156,
      83,
      71,
      121,
      154,
      165,
      69,
      249,
      135,
      123,
      237,
      110,
      26,
      191,
      38,
      56,
      246,
      97,
      112,
      91,
      76,
      211,
      233,
      34,
      78,
      34,
      225,
      111,
      84,
      115,
      15,
      194,
      243,
      185,
      127,
      243,
      210,
      197,
      78,
      44,
      147,
      114,
      17,
      91,
      108,
      151,
      169,
      157,
      209,
      238,
      232,
      165,
      144,
      244,
      168,
      243,
      173,
      93,
      133,
      122,
      226,
      168,
      98,
      255,
      90,
      13,
      40,
      135,
      245,
      185,
      24,
      253,
      227,
      253,
      163,
      55,
      73,
      153,
      233,
      221,
      133,
      8,
      216,
      228,
      166,
      96,
      205,
      7,
      81,
      64,
      229,
      130,
      219,
      136,
      236,
      5,
      50,
      185,
      205,
      144,
      215,
      121,
      184,
      184,
      80,
      10,
      4,
      49,
      18,
      121,
      202,
      177,
      249,
      6,
      79,
      95,
      241,
      191,
      242,
      106,
      196,
      163,
      221,
      66,
      239,
      154,
      182,
      90,
      194,
      172,
      216,
      251,
      197,
      234,
      154,
      155,
      86,
      220,
      138,
      217,
      26,
      125,
      222,
      0,
      157,
      163,
      157,
      81,
      214,
      64,
      31,
      157,
      57,
      175,
      134,
      4,
      222,
      24,
      175,
      60,
      222,
      168,
      180,
      63,
      55,
      35,
      222,
      236,
      94,
      114,
      236,
      82,
      221,
      93,
      79,
      114,
      155,
      20,
      179,
      177,
      86,
      187,
      51,
      201,
      203,
      122,
      49,
      246,
      68,
      164,
      128,
      200,
      203,
      59,
      31,
      216,
      235,
      21,
      179,
      248,
      134,
      244,
      160,
      27,
      202,
      48,
      59,
      98,
      33,
      119,
      60,
      199,
      139,
      252,
      227,
      227,
      188,
      138,
      151,
      174,
      146,
      143,
      244,
      27,
      152,
      217,
      190,
      142,
      216,
      137,
      238,
      4,
      215,
      21,
      136,
      129,
      234,
      222,
      240,
      191,
      69,
      229,
      248,
      31,
      167,
      49,
      29,
      145,
      220,
      158,
      243,
      130,
      2,
      106,
      111,
      57,
      97,
      152,
      186,
      48,
      228,
      177,
      204,
      34,
      202,
      58,
      139,
      58,
      63,
      43,
      125,
      190,
      129,
      36,
      188,
      245,
      178,
      119,
      222,
      75,
      108,
      238,
      233,
      160,
      141,
      18,
      187,
      141,
      119,
      8,
      68,
      55,
      147,
      120,
      173,
      144,
      57,
      4,
      190,
      244,
      101,
      28,
      85,
      127,
      120,
      87,
      142,
      204,
      107,
      62,
      16,
      221,
      133,
      239,
      44,
      166,
      222,
      91,
      28,
      119,
      203,
      211,
      25,
      217,
      101,
      87,
      194,
      174,
      15,
      221,
      42,
      79,
      217,
      36,
      95,
      3,
      136,
      17,
      85,
      34,
      64,
      112,
      193,
      201,
      142,
      115,
      234,
      215,
      46,
      128,
      254,
      181,
      94,
      125,
      212,
      121,
      67,
      23,
      120,
      58,
      134,
      159,
      136,
      96,
      139,
      4,
      211,
      71,
      146,
      157,
      133,
      157,
      197,
      111,
      84,
      23,
      114,
      230,
      159,
      10,
      200,
      16,
      89,
      29,
      81,
      21,
      163,
      52,
      237,
      71,
      203,
      183,
      90,
      226,
      105,
      148,
      143,
      231,
      243,
      88,
      164,
      227,
      251,
      248,
      206,
      152,
      249,
      12,
      63,
      156,
      132,
      134,
      32,
      232,
      203,
      204,
      107,
      253,
      218,
      65,
      248,
      189,
      238,
      246,
      68,
      244,
      239,
      19,
      134,
      117,
      55,
      202,
      87,
      187,
      99,
      3,
      97,
      48,
      150,
      74,
      40,
      165,
      93,
      131,
      234,
      75,
      59,
      79,
      145,
      100,
      39,
      211,
      35,
      230,
      234,
      192,
      114,
      56,
      229,
      234,
      151,
      215,
      74,
      157,
      93,
      12,
      160,
      81,
      0,
      4,
      246,
      74,
      122,
      158,
      173,
      146,
      159,
      220,
      240,
      224,
      190,
      5,
      172,
      18,
      56,
      171,
      187,
      145,
      25,
      250,
      17,
      202,
      191,
      91,
      216,
      74,
      56,
      252,
      71,
      76,
      107,
      90,
      178,
      44,
      167,
      131,
      130,
      254,
      248,
      39,
      52,
      203,
      154,
      69,
      52,
      55,
      74,
      128,
      67,
      254,
      107,
      65,
      142,
      88,
      240,
      244,
      248,
      91,
      52,
      42,
      173,
      16,
      140,
      96,
      139,
      121,
      81,
      230,
      184,
      77,
      194,
      91,
      120,
      151,
      12,
      234,
      231,
      35,
      254,
      37,
      119,
      18,
      157,
      250,
      106,
      125,
      173,
      78,
      253,
      218,
      236,
      105,
      40,
      37,
      14,
      78,
      148,
      62,
      16,
      13,
      200,
      40,
      77,
      24,
      14,
      152,
      123,
      91,
      171,
      153,
      220,
      64,
      91,
      170,
      205,
      65,
      94,
      123,
      193,
      72,
      252,
      48,
      157,
      146,
      98,
      150,
      237,
      244,
      86,
      189,
      249,
      194,
      96,
      17,
      39,
      149,
      29,
      44,
      111,
      102,
      225,
      224,
      106,
      156,
      191,
      62,
      156,
      217,
      147,
      32,
      148,
      17,
      38,
      16,
      67,
      106,
      129,
      118,
      65,
      1,
      114,
      82,
      6,
      166,
      207,
      31,
      19,
      239,
      80,
      27,
      173,
      63,
      218,
      145,
      122,
      36,
      0,
      41,
      238,
      241,
      183,
      72,
      249,
      163,
      198,
      175,
      65,
      152,
      96,
      156,
      18,
      185,
      88,
      225,
      232,
      88,
      145,
      30,
      32,
      112,
      89,
      184,
      176,
      231,
      114,
      158,
      223,
      142,
      58,
      146,
      177,
      41,
      14,
      86,
      140,
      82,
      28,
      33,
      3,
      135,
      28,
      122,
      61,
      62,
      104,
      128,
      69,
      3,
      50,
      174,
      88,
      168,
      186,
      71,
      133,
      201,
      50,
      229,
      230,
      5,
      171,
      17,
      223,
      173,
      14,
      140,
      128,
      45,
      81,
      230,
      242,
      177,
      193,
      243,
      228,
      122,
      169,
      94,
      60,
      208,
      246,
      9,
      193,
      76,
      211,
      37,
      158,
      75,
      228,
      178,
      241,
      68,
      184,
      148,
      67,
      9,
      29,
      140,
      18,
      42,
      57,
      112,
      212,
      141,
      80,
      89,
      55,
      166,
      216,
      105,
      101,
      174,
      92,
      208,
      21,
      56,
      25,
      218,
      52,
      151,
      29,
      28,
      234,
      81,
      48,
      181,
      214,
      156,
      101,
      50,
      75,
      163,
      36,
      13,
      136,
      109,
      226,
      216,
      254,
      122,
      201,
      220,
      100,
      147,
      50,
      200,
      71,
      217,
      125,
      32,
      210,
      143,
      76,
      102,
      21,
      77,
      221,
      0,
      235,
      40,
      45,
      178,
      246,
      183,
      183,
      10,
      5,
      103,
      52,
      187,
      109,
      215,
      99,
      49,
      253,
      235,
      126,
      119,
      162,
      230,
      150,
      208,
      12,
      100,
      169,
      53,
      20,
      239,
      138,
      175,
      119,
      123,
      126,
      228,
      4,
      71,
      231,
      23,
      208,
      40,
      97,
      254,
      153,
      1,
      169,
      210,
      224,
      221,
      255,
      76,
      71,
      105,
      141,
      219,
      248,
      34,
      86,
      147,
      128,
      216,
      7,
      66,
      112,
      234,
      214,
      70,
      61,
      131,
      181,
      104,
      24,
      241,
      88,
      5,
      24,
      95,
      197,
      230,
      65,
      53,
      105,
      171,
      43,
      118,
      55,
      83,
      109,
      29,
      209,
      91,
      88,
      81,
      6,
      25,
      240,
      228,
      24,
      238,
      34,
      141,
      194,
      184,
      110,
      66,
      233,
      254,
      236,
      41,
      47,
      146,
      17,
      199,
      23,
      12,
      27,
      109,
      77,
      27,
      25,
      10,
      90,
      232,
      32,
      236,
      106,
      238,
      110,
      85,
      187,
      150,
      190,
      25,
      251,
      47,
      167,
      198,
      179,
      83,
      25,
      128,
      172,
      48,
      201,
      206,
      226,
      121,
      190,
      252,
      129,
      141,
      22,
      235,
      72,
      155,
      54,
      48,
      245,
      99,
      43,
      121,
      243,
      93,
      121,
      199,
      63,
      174,
      129,
      133,
      93,
      212,
      217,
      134,
      179,
      248,
      125,
      91,
      191,
      10,
      201,
      23,
      98,
      42,
      140,
      155,
      13,
      8,
      162,
      73,
      186,
      109,
      72,
      51,
      116,
      85,
      151,
      126,
      66,
      210,
      26,
      50,
      137,
      229,
      74,
      47,
      253,
      255,
      15,
      90,
      123,
      30,
      199,
      173,
      244,
      79,
      83,
      189,
      24,
      168,
      20,
      140,
      185,
      137,
      193,
      102,
      243,
      112,
      205,
      190,
      128,
      143,
      202,
      35,
      24,
      161,
      30,
      189,
      201,
      137,
      19,
      207,
      190,
      211,
      18,
      162,
      119,
      185,
      58,
      233,
      24,
      47,
      158,
      178,
      100,
      15,
      93,
      223,
      188,
      171,
      70,
      120,
      56,
      217,
      19,
      207,
      216,
      58,
      205,
      250,
      254,
      11,
      3,
      7,
      65,
      103,
      222,
      113,
      114,
      197,
      154,
      214,
      97,
      99,
      184,
      84,
      207,
      3,
      79,
      98,
      162,
      116,
      81,
      193,
      156,
      28,
      158,
      103,
      78,
      111,
      241,
      95,
      126,
      84,
      39,
      253,
      44,
      178,
      38,
      241,
      167,
      204,
      119,
      255,
      194,
      163,
      114,
      89,
      5,
      141,
      68,
      156,
      63,
      95,
      64,
      102,
      218,
      164,
      23,
      34,
      232,
      10,
      35,
      206,
      184,
      203,
      244,
      216,
      118,
      175,
      245,
      87,
      78,
      152,
      240,
      235,
      140,
      222,
      229,
      196,
      90,
      144,
      161,
      149,
      238,
      86,
      64,
      22,
      64,
      34,
      243,
      27,
      90,
      17,
      168,
      146,
      134,
      24,
      210,
      187,
      146,
      160,
      133,
      200,
      16,
      201,
      118,
      173,
      88,
      86,
      247,
      190,
      105,
      143,
      11,
      218,
      247,
      31,
      191,
      157,
      29,
      126,
      236,
      154,
      135,
      27,
      89,
      27,
      159,
      177,
      252,
      24,
      41,
      117,
      222,
      204,
      88,
      191,
      229,
      7,
      124,
      21,
      228,
      18,
      12,
      213,
      138,
      234,
      190,
      238,
      66,
      230,
      17,
      150,
      50,
      221,
      218,
      162,
      162,
      247,
      61,
      222,
      239,
      95,
      5,
      65,
      215,
      35,
      97,
      65,
      103,
      68,
      215,
      17,
      43,
      178,
      147,
      238,
      153,
      84,
      135,
      6,
      95,
      207,
      42,
      45,
      247,
      195,
      85,
      165,
      130,
      235,
      81,
      116,
      251,
      79,
      160,
      148,
      84,
      42,
      115,
      233,
      186,
      81,
      14,
      221,
      152,
      30,
      218,
      255,
      51,
      208,
      68,
      231,
      98,
      167,
      108,
      181,
      96,
      119,
      80,
      188,
      78,
      124,
      204,
      20,
      81,
      213,
      102,
      68,
      156,
      223,
      47,
      25,
      40,
      124,
      169,
      43,
      59,
      1,
      64,
      158,
      70,
      101,
      170,
      194,
      210,
      206,
      33,
      72,
      203,
      29,
      115,
      189,
      233,
      57,
      217,
      142,
      42,
      81,
      15,
      88,
      215,
      192,
      231,
      167,
      233,
      89,
      149,
      123,
      216,
      206,
      174,
      254,
      237,
      193,
      103,
      209,
      51,
      193,
      9,
      250,
      32,
      161,
      78,
      142,
      232,
      120,
      102,
      183,
      111,
      156,
      2,
      180,
      92,
      107,
      128,
      133,
      198,
      152,
      211,
      115,
      192,
      145,
      209,
      197,
      20,
      126,
      69,
      77,
      131,
      148,
      52,
      42,
      157,
      252,
      229,
      124,
      13,
      45,
      169,
      237,
      55,
      118,
      177,
      218,
      174,
      192,
      122,
      240,
      117,
      113,
      224,
      241,
      185,
      243,
      130,
      249,
      102,
      44,
      117,
      221,
      166,
      220,
      231,
      96,
      217,
      210,
      18,
      77,
      220,
      49,
      240,
      190,
      62,
      132,
      125,
      173,
      101,
      214,
      238,
      254,
      42,
      48,
      225,
      251,
      166,
      115,
      196,
      164,
      103,
      46,
      12,
      249,
      118,
      113,
      100,
      77,
      65,
      239,
      217,
      191,
      155,
      62,
      136,
      172,
      55,
      62,
      111,
      191,
      76,
      57,
      52,
      44,
      205,
      182,
      112,
      254,
      13,
      63,
      77,
      50,
      90,
      224,
      73,
      244,
      22,
      1,
      167,
      209,
      143,
      124,
      186,
      167,
      70,
      150,
      8,
      65,
      170,
      206,
      165,
      93,
      81,
      194,
      35,
      96,
      127,
      10,
      191,
      99,
      241,
      231,
      208,
      193,
      25,
      142,
      208,
      222,
      73,
      71,
      135,
      131,
      142,
      60,
      114,
      140,
      1,
      249,
      57,
      52,
      182,
      213,
      62,
      198,
      115,
      175,
      195,
      204,
      91,
      95,
      217,
      94,
      76,
      102,
      90,
      92,
      46,
      83,
      79,
      90,
      76,
      222,
      26,
      210,
      217,
      253,
      84,
      46,
      162,
      115,
      173,
      197,
      48,
      24,
    ],
    "type": "Buffer",
  },
  "publicKey": {
    "data": [
      48,
      130,
      7,
      178,
      48,
      11,
      6,
      9,
      96,
      134,
      72,
      1,
      101,
      3,
      4,
      3,
      18,
      3,
      130,
      7,
      161,
      0,
      188,
      50,
      137,
      122,
      248,
      2,
      225,
      184,
      114,
      91,
      219,
      230,
      117,
      161,
      106,
      49,
      108,
      0,
      237,
      103,
      133,
      104,
      29,
      225,
      158,
      168,
      247,
      182,
      182,
      179,
      225,
      29,
      107,
      226,
      29,
      114,
      70,
      108,
      195,
      176,
      173,
      44,
      31,
      253,
      233,
      206,
      221,
      234,
      211,
      53,
      216,
      212,
      233,
      235,
      170,
      51,
      82,
      43,
      181,
      167,
      48,
      25,
      174,
      209,
      160,
      151,
      201,
      44,
      142,
      66,
      63,
      174,
      172,
      132,
      196,
      34,
      214,
      25,
      108,
      131,
      172,
      100,
      37,
      44,
      189,
      120,
      218,
      105,
      128,
      216,
      174,
      59,
      66,
      21,
      210,
      105,
      233,
      107,
      163,
      149,
      82,
      59,
      193,
      8,
      130,
      241,
      209,
      140,
      169,
      82,
      132,
      47,
      125,
      99,
      95,
      124,
      121,
      246,
      163,
      167,
      74,
      144,
      17,
      4,
      21,
      204,
      165,
      55,
      46,
      254,
      10,
      31,
      146,
      48,
      236,
      173,
      51,
      18,
      0,
      196,
      24,
      56,
      146,
      209,
      66,
      223,
      103,
      219,
      254,
      140,
      81,
      213,
      91,
      215,
      47,
      120,
      39,
      226,
      193,
      108,
      135,
      87,
      198,
      16,
      33,
      22,
      235,
      182,
      29,
      31,
      40,
      226,
      183,
      106,
      37,
      110,
      95,
      37,
      119,
      54,
      102,
      115,
      157,
      10,
      243,
      132,
      41,
      141,
      128,
      34,
      136,
      10,
      89,
      186,
      7,
      41,
      178,
      9,
      156,
      111,
      251,
      235,
      115,
      249,
      8,
      33,
      53,
      69,
      161,
      17,
      193,
      104,
      126,
      142,
      28,
      169,
      185,
      118,
      161,
      107,
      102,
      211,
      33,
      40,
      184,
      211,
      121,
      55,
      133,
      120,
      3,
      232,
      248,
      217,
      196,
      188,
      127,
      209,
      157,
      238,
      185,
      68,
      45,
      63,
      236,
      174,
      233,
      42,
      244,
      64,
      187,
      109,
      182,
      11,
      136,
      200,
      155,
      218,
      20,
      138,
      188,
      100,
      158,
      170,
      150,
      61,
      46,
      229,
      141,
      228,
      96,
      13,
      24,
      157,
      67,
      162,
      144,
      221,
      236,
      249,
      207,
      162,
      128,
      250,
      38,
      207,
      195,
      236,
      86,
      253,
      126,
      92,
      148,
      30,
      90,
      237,
      153,
      135,
      34,
      31,
      162,
      46,
      147,
      114,
      15,
      100,
      191,
      89,
      71,
      141,
      192,
      165,
      132,
      201,
      78,
      224,
      162,
      77,
      89,
      79,
      196,
      196,
      108,
      171,
      135,
      171,
      160,
      206,
      141,
      62,
      122,
      188,
      250,
      190,
      253,
      22,
      79,
      175,
      115,
      181,
      208,
      181,
      22,
      67,
      83,
      67,
      136,
      35,
      63,
      101,
      255,
      238,
      201,
      218,
      73,
      48,
      224,
      114,
      150,
      222,
      10,
      77,
      160,
      88,
      108,
      185,
      52,
      125,
      129,
      150,
      34,
      233,
      0,
      180,
      131,
      117,
      146,
      191,
      228,
      223,
      216,
      5,
      171,
      52,
      72,
      225,
      28,
      107,
      123,
      6,
      67,
      98,
      131,
      90,
      242,
      182,
      234,
      218,
      235,
      139,
      58,
      235,
      113,
      173,
      13,
      109,
      252,
      56,
      206,
      250,
      227,
      236,
      65,
      63,
      139,
      99,
      1,
      125,
      198,
      43,
      3,
      14,
      68,
      87,
      213,
      14,
      100,
      51,
      44,
      47,
      35,
      230,
      252,
      126,
      180,
      71,
      120,
      102,
      9,
      188,
      80,
      133,
      246,
      149,
      98,
      34,
      22,
      149,
      48,
      203,
      99,
      163,
      111,
      149,
      17,
      28,
      136,
      235,
      30,
      127,
      126,
      34,
      46,
      204,
      255,
      158,
      191,
      143,
      95,
      9,
      113,
      11,
      138,
      14,
      200,
      24,
      253,
      226,
      161,
      201,
      106,
      228,
      27,
      128,
      230,
      143,
      49,
      50,
      204,
      21,
      173,
      74,
      100,
      204,
      19,
      110,
      141,
      7,
      223,
      134,
      87,
      0,
      47,
      183,
      192,
      142,
      159,
      222,
      244,
      67,
      234,
      145,
      101,
      246,
      210,
      108,
      202,
      140,
      194,
      37,
      5,
      255,
      188,
      128,
      41,
      246,
      44,
      201,
      251,
      173,
      116,
      109,
      1,
      205,
      45,
      238,
      253,
      33,
      78,
      225,
      254,
      26,
      84,
      244,
      42,
      197,
      70,
      45,
      181,
      229,
      120,
      46,
      100,
      52,
      42,
      43,
      199,
      132,
      20,
      37,
      94,
      24,
      201,
      172,
      251,
      201,
      247,
      77,
      218,
      57,
      173,
      151,
      19,
      88,
      95,
      164,
      154,
      249,
      110,
      114,
      129,
      34,
      137,
      239,
      133,
      90,
      56,
      61,
      214,
      208,
      171,
      201,
      74,
      111,
      176,
      192,
      174,
      41,
      27,
      93,
      244,
      43,
      129,
      31,
      116,
      57,
      106,
      27,
      164,
      77,
      136,
      21,
      138,
      56,
      26,
      252,
      192,
      4,
      89,
      139,
      125,
      176,
      149,
      111,
      121,
      236,
      85,
      11,
      129,
      35,
      51,
      95,
      127,
      80,
      18,
      149,
      141,
      217,
      84,
      141,
      153,
      232,
      174,
      97,
      44,
      133,
      42,
      106,
      147,
      88,
      192,
      145,
      226,
      253,
      35,
      9,
      60,
      194,
      220,
      177,
      186,
      8,
      248,
      12,
      223,
      224,
      77,
      93,
      75,
      250,
      210,
      229,
      10,
      40,
      214,
      237,
      205,
      109,
      244,
      231,
      110,
      162,
      103,
      197,
      145,
      133,
      222,
      222,
      168,
      60,
      223,
      54,
      20,
      199,
      80,
      84,
      186,
      18,
      20,
      16,
      3,
      91,
      53,
      74,
      13,
      205,
      163,
      99,
      198,
      100,
      106,
      41,
      174,
      21,
      93,
      10,
      47,
      85,
      244,
      148,
      232,
      181,
      46,
      168,
      172,
      185,
      75,
      188,
      178,
      253,
      130,
      67,
      149,
      161,
      1,
      49,
      44,
      132,
      232,
      148,
      237,
      17,
      38,
      147,
      79,
      132,
      202,
      246,
      14,
      254,
      225,
      28,
      86,
      128,
      134,
      113,
      30,
      133,
      54,
      213,
      194,
      215,
      163,
      113,
      32,
      6,
      68,
      201,
      63,
      92,
      242,
      104,
      39,
      249,
      13,
      158,
      59,
      162,
      155,
      194,
      174,
      176,
      38,
      180,
      104,
      201,
      77,
      179,
      161,
      68,
      127,
      61,
      90,
      145,
      70,
      20,
      98,
      110,
      211,
      193,
      94,
      59,
      13,
      30,
      245,
      128,
      181,
      26,
      89,
      137,
      40,
      179,
      49,
      38,
      3,
      37,
      123,
      107,
      251,
      206,
      215,
      214,
      122,
      180,
      195,
      242,
      203,
      63,
      73,
      233,
      93,
      17,
      244,
      175,
      89,
      208,
      18,
      194,
      131,
      223,
      208,
      215,
      111,
      146,
      92,
      250,
      70,
      202,
      103,
      124,
      125,
      130,
      93,
      208,
      53,
      172,
      15,
      205,
      38,
      112,
      190,
      93,
      78,
      217,
      146,
      247,
      77,
      103,
      148,
      146,
      68,
      181,
      185,
      170,
      80,
      152,
      223,
      124,
      65,
      57,
      33,
      149,
      111,
      62,
      100,
      109,
      142,
      124,
      71,
      34,
      94,
      145,
      36,
      218,
      82,
      3,
      12,
      145,
      244,
      25,
      2,
      208,
      137,
      201,
      68,
      16,
      112,
      76,
      0,
      207,
      77,
      157,
      209,
      50,
      157,
      206,
      235,
      24,
      238,
      26,
      151,
      241,
      6,
      15,
      73,
      79,
      219,
      228,
      86,
      81,
      46,
      131,
      216,
      210,
      117,
      179,
      19,
      168,
      226,
      215,
      128,
      16,
      38,
      79,
      89,
      32,
      250,
      15,
      31,
      247,
      151,
      187,
      141,
      81,
      190,
      158,
      150,
      37,
      97,
      39,
      105,
      196,
      53,
      83,
      242,
      1,
      232,
      83,
      10,
      188,
      3,
      194,
      168,
      89,
      144,
      162,
      210,
      239,
      254,
      242,
      220,
      188,
      244,
      140,
      151,
      228,
      215,
      88,
      70,
      210,
      225,
      100,
      19,
      175,
      185,
      184,
      117,
      4,
      244,
      183,
      65,
      218,
      242,
      108,
      6,
      82,
      195,
      61,
      54,
      29,
      14,
      194,
      209,
      179,
      106,
      221,
      150,
      82,
      49,
      139,
      131,
      46,
      102,
      203,
      220,
      149,
      82,
      55,
      21,
      15,
      145,
      243,
      133,
      90,
      67,
      229,
      43,
      216,
      36,
      39,
      78,
      215,
      253,
      173,
      79,
      121,
      52,
      190,
      202,
      105,
      178,
      140,
      186,
      238,
      201,
      123,
      242,
      197,
      60,
      60,
      119,
      241,
      20,
      86,
      88,
      122,
      147,
      92,
      52,
      212,
      108,
      119,
      120,
      56,
      114,
      6,
      25,
      166,
      182,
      168,
      33,
      75,
      239,
      211,
      101,
      239,
      210,
      38,
      126,
      138,
      52,
      137,
      50,
      71,
      132,
      249,
      106,
      245,
      244,
      81,
      239,
      15,
      172,
      218,
      231,
      226,
      32,
      20,
      27,
      171,
      139,
      12,
      154,
      32,
      15,
      122,
      95,
      230,
      197,
      205,
      143,
      172,
      136,
      18,
      41,
      20,
      53,
      85,
      196,
      170,
      34,
      254,
      118,
      30,
      127,
      206,
      247,
      78,
      150,
      143,
      104,
      69,
      120,
      59,
      57,
      173,
      150,
      36,
      60,
      160,
      54,
      181,
      80,
      63,
      139,
      181,
      252,
      245,
      199,
      172,
      127,
      39,
      172,
      145,
      140,
      240,
      198,
      148,
      10,
      187,
      103,
      81,
      11,
      226,
      47,
      129,
      119,
      28,
      39,
      180,
      106,
      154,
      102,
      24,
      104,
      120,
      144,
      152,
      34,
      30,
      1,
      16,
      243,
      51,
      160,
      102,
      203,
      163,
      149,
      94,
      245,
      40,
      57,
      208,
      68,
      36,
      169,
      194,
      14,
      219,
      192,
      57,
      254,
      111,
      225,
      80,
      149,
      242,
      191,
      189,
      121,
      80,
      222,
      253,
      42,
      195,
      2,
      140,
      244,
      18,
      163,
      165,
      9,
      103,
      169,
      97,
      129,
      84,
      240,
      17,
      51,
      2,
      45,
      226,
      223,
      96,
      146,
      76,
      16,
      248,
      122,
      220,
      51,
      112,
      200,
      41,
      77,
      5,
      72,
      29,
      128,
      171,
      95,
      57,
      91,
      7,
      162,
      23,
      197,
      4,
      189,
      72,
      69,
      217,
      57,
      22,
      10,
      206,
      81,
      171,
      61,
      27,
      56,
      49,
      217,
      201,
      34,
      54,
      35,
      119,
      118,
      24,
      11,
      165,
      242,
      145,
      227,
      46,
      87,
      109,
      103,
      43,
      71,
      209,
      149,
      16,
      58,
      242,
      239,
      221,
      111,
      175,
      182,
      28,
      87,
      140,
      67,
      150,
      220,
      57,
      101,
      205,
      236,
      116,
      27,
      211,
      208,
      172,
      82,
      58,
      205,
      50,
      136,
      136,
      199,
      86,
      90,
      245,
      23,
      235,
      208,
      158,
      153,
      104,
      48,
      4,
      62,
      71,
      217,
      216,
      247,
      135,
      204,
      114,
      17,
      1,
      176,
      211,
      186,
      193,
      3,
      98,
      23,
      219,
      65,
      133,
      247,
      67,
      200,
      236,
      46,
      157,
      198,
      157,
      81,
      156,
      177,
      125,
      90,
      36,
      50,
      38,
      182,
      45,
      143,
      200,
      231,
      248,
      139,
      48,
      226,
      211,
      91,
      181,
      61,
      176,
      152,
      35,
      74,
      58,
      220,
      32,
      217,
      193,
      28,
      198,
      171,
      206,
      120,
      25,
      83,
      4,
      203,
      35,
      114,
      99,
      85,
      99,
      6,
      145,
      182,
      72,
      177,
      77,
      190,
      130,
      111,
      2,
      149,
      153,
      224,
      227,
      134,
      85,
      9,
      162,
      99,
      12,
      211,
      180,
      217,
      206,
      66,
      6,
      69,
      83,
      6,
      19,
      139,
      237,
      207,
      143,
      99,
      140,
      120,
      86,
      118,
      114,
      15,
      22,
      160,
      24,
      143,
      134,
      253,
      132,
      178,
      14,
      216,
      187,
      3,
      92,
      172,
      235,
      12,
      215,
      254,
      6,
      199,
      8,
      104,
      154,
      189,
      130,
      210,
      52,
      41,
      210,
      202,
      50,
      208,
      238,
      130,
      103,
      149,
      162,
      215,
      36,
      0,
      31,
      118,
      99,
      225,
      245,
      132,
      108,
      140,
      226,
      48,
      25,
      20,
      224,
      85,
      191,
      13,
      62,
      195,
      221,
      103,
      241,
      53,
      140,
      205,
      33,
      4,
      209,
      105,
      76,
      6,
      225,
      161,
      244,
      120,
      5,
      4,
      194,
      192,
      224,
      86,
      5,
      18,
      254,
      110,
      168,
      168,
      73,
      191,
      142,
      129,
      47,
      48,
      38,
      145,
      67,
      250,
      95,
      210,
      73,
      117,
      139,
      151,
      96,
      241,
      199,
      236,
      106,
      184,
      52,
      76,
      2,
      159,
      136,
      107,
      95,
      105,
      75,
      88,
      217,
      134,
      110,
      141,
      173,
      129,
      115,
      84,
      183,
      179,
      83,
      249,
      31,
      250,
      33,
      163,
      39,
      252,
      179,
      188,
      223,
      32,
      52,
      207,
      7,
      98,
      165,
      43,
      88,
      74,
      173,
      167,
      70,
      197,
      34,
      211,
      140,
      53,
      169,
      112,
      91,
      21,
      194,
      143,
      124,
      185,
      247,
      196,
      75,
      91,
      65,
      206,
      76,
      87,
      137,
      33,
      55,
      48,
      232,
      25,
      81,
      101,
      124,
      68,
      203,
      216,
      238,
      209,
      3,
      59,
      186,
      195,
      167,
      43,
      9,
      47,
      24,
      210,
      248,
      96,
      11,
      12,
      112,
      6,
      28,
      106,
      38,
      124,
      123,
      1,
      63,
      169,
      127,
      51,
      161,
      175,
      115,
      76,
      221,
      169,
      227,
      25,
      243,
      90,
      87,
      110,
      67,
      225,
      119,
      57,
      225,
      202,
      11,
      217,
      82,
      216,
      232,
      144,
      46,
      250,
      54,
      31,
      250,
      57,
      92,
      24,
      172,
      146,
      151,
      108,
      195,
      151,
      118,
      255,
      144,
      141,
      108,
      114,
      159,
      158,
      172,
      106,
      153,
      10,
      134,
      189,
      236,
      165,
      75,
      48,
      143,
      95,
      186,
      72,
      92,
      191,
      4,
      11,
      250,
      149,
      173,
      217,
      168,
      84,
      60,
      105,
      196,
      19,
      57,
      18,
      193,
      139,
      240,
      191,
      11,
      178,
      75,
      161,
      71,
      190,
      135,
      153,
      24,
      91,
      68,
      175,
      31,
      173,
      211,
      169,
      186,
      5,
      240,
      233,
      46,
      237,
      48,
      21,
      148,
      19,
      32,
      209,
      191,
      253,
      243,
      138,
      58,
      76,
      152,
      137,
      6,
      50,
      153,
      131,
      130,
      213,
      149,
      145,
      168,
      188,
      107,
      195,
      237,
      100,
      112,
      71,
      89,
      190,
      204,
      141,
      75,
      55,
      42,
      208,
      29,
      185,
      70,
      197,
      194,
      184,
      234,
      134,
      89,
      133,
      63,
      167,
      221,
      166,
      2,
      43,
      9,
      118,
      242,
      154,
      176,
      243,
      19,
      125,
      255,
      157,
      117,
      184,
      116,
      74,
      235,
      165,
      162,
      206,
      251,
      13,
      111,
      238,
      129,
      195,
      84,
      33,
      96,
      206,
      144,
      0,
      80,
      59,
      179,
      53,
      139,
      7,
      202,
      102,
      132,
      177,
      173,
      218,
      217,
      167,
      61,
      132,
      148,
      111,
      151,
      186,
      17,
      39,
      113,
      194,
      134,
      167,
      133,
      37,
      121,
      183,
      158,
      70,
      132,
      16,
      131,
      198,
      104,
      194,
      31,
      214,
      183,
      250,
      81,
      209,
      230,
      201,
      14,
      161,
      175,
      161,
      187,
      19,
      122,
      215,
      230,
      87,
      29,
      74,
      200,
      116,
      235,
      161,
      34,
      30,
      144,
      189,
      187,
      75,
      54,
      220,
      88,
      242,
      191,
      0,
      131,
      241,
      209,
      19,
      46,
      82,
      230,
      82,
      200,
      150,
      129,
      102,
      38,
      144,
      205,
      67,
      216,
      210,
      10,
      68,
      196,
    ],
    "type": "Buffer",
  },
  "type": "AKP",
  "use": "sig",
}
`;

exports[`Kryptos (AKP) export should export jwk 1`] = `
{
  "alg": "ML-DSA-65",
  "kid": "3b9a051f-e1ec-562b-bf92-7cf92ec465ba",
  "kty": "AKP",
  "priv": "SX-SoGL-r_Wdtv5tOqmiORarqSKlyNwcN1TE-OyGVzo",
  "pub": "vDKJevgC4bhyW9vmdaFqMWwA7WeFaB3hnqj3traz4R1r4h1yRmzDsK0sH_3pzt3q0zXY1OnrqjNSK7WnMBmu0aCXySyOQj-urITEItYZbIOsZCUsvXjaaYDYrjtCFdJp6WujlVI7wQiC8dGMqVKEL31jX3x59qOnSpARBBXMpTcu_gofkjDsrTMSAMQYOJLRQt9n2_6MUdVb1y94J-LBbIdXxhAhFuu2HR8o4rdqJW5fJXc2ZnOdCvOEKY2AIogKWboHKbIJnG_763P5CCE1RaERwWh-jhypuXaha2bTISi403k3hXgD6PjZxLx_0Z3uuUQtP-yu6Sr0QLtttguIyJvaFIq8ZJ6qlj0u5Y3kYA0YnUOikN3s-c-igPomz8PsVv1-XJQeWu2ZhyIfoi6Tcg9kv1lHjcClhMlO4KJNWU_ExGyrh6ugzo0-erz6vv0WT69ztdC1FkNTQ4gjP2X_7snaSTDgcpbeCk2gWGy5NH2BliLpALSDdZK_5N_YBas0SOEca3sGQ2KDWvK26trrizrrca0Nbfw4zvrj7EE_i2MBfcYrAw5EV9UOZDMsLyPm_H60R3hmCbxQhfaVYiIWlTDLY6NvlREciOsef34iLsz_nr-PXwlxC4oOyBj94qHJauQbgOaPMTLMFa1KZMwTbo0H34ZXAC-3wI6f3vRD6pFl9tJsyozCJQX_vIAp9izJ-610bQHNLe79IU7h_hpU9CrFRi215XguZDQqK8eEFCVeGMms-8n3Tdo5rZcTWF-kmvlucoEiie-FWjg91tCryUpvsMCuKRtd9CuBH3Q5ahukTYgVijga_MAEWYt9sJVveexVC4EjM19_UBKVjdlUjZnormEshSpqk1jAkeL9Iwk8wtyxugj4DN_gTV1L-tLlCijW7c1t9OduomfFkYXe3qg83zYUx1BUuhIUEANbNUoNzaNjxmRqKa4VXQovVfSU6LUuqKy5S7yy_YJDlaEBMSyE6JTtESaTT4TK9g7-4RxWgIZxHoU21cLXo3EgBkTJP1zyaCf5DZ47opvCrrAmtGjJTbOhRH89WpFGFGJu08FeOw0e9YC1GlmJKLMxJgMle2v7ztfWerTD8ss_SeldEfSvWdASwoPf0Ndvklz6RspnfH2CXdA1rA_NJnC-XU7ZkvdNZ5SSRLW5qlCY33xBOSGVbz5kbY58RyJekSTaUgMMkfQZAtCJyUQQcEwAz02d0TKdzusY7hqX8QYPSU_b5FZRLoPY0nWzE6ji14AQJk9ZIPoPH_eXu41Rvp6WJWEnacQ1U_IB6FMKvAPCqFmQotLv_vLcvPSMl-TXWEbS4WQTr7m4dQT0t0Ha8mwGUsM9Nh0OwtGzat2WUjGLgy5my9yVUjcVD5HzhVpD5SvYJCdO1_2tT3k0vsppsoy67sl78sU8PHfxFFZYepNcNNRsd3g4cgYZpraoIUvv02Xv0iZ-ijSJMkeE-Wr19FHvD6za5-IgFBuriwyaIA96X-bFzY-siBIpFDVVxKoi_nYef873TpaPaEV4OzmtliQ8oDa1UD-Ltfz1x6x_J6yRjPDGlAq7Z1EL4i-BdxwntGqaZhhoeJCYIh4BEPMzoGbLo5Ve9Sg50EQkqcIO28A5_m_hUJXyv715UN79KsMCjPQSo6UJZ6lhgVTwETMCLeLfYJJMEPh63DNwyClNBUgdgKtfOVsHohfFBL1IRdk5FgrOUas9Gzgx2ckiNiN3dhgLpfKR4y5XbWcrR9GVEDry791vr7YcV4xDltw5Zc3sdBvT0KxSOs0yiIjHVlr1F-vQnploMAQ-R9nY94fMchEBsNO6wQNiF9tBhfdDyOwuncadUZyxfVokMia2LY_I5_iLMOLTW7U9sJgjSjrcINnBHMarzngZUwTLI3JjVWMGkbZIsU2-gm8ClZng44ZVCaJjDNO02c5CBkVTBhOL7c-PY4x4VnZyDxagGI-G_YSyDti7A1ys6wzX_gbHCGiavYLSNCnSyjLQ7oJnlaLXJAAfdmPh9YRsjOIwGRTgVb8NPsPdZ_E1jM0hBNFpTAbhofR4BQTCwOBWBRL-bqioSb-OgS8wJpFD-l_SSXWLl2Dxx-xquDRMAp-Ia19pS1jZhm6NrYFzVLezU_kf-iGjJ_yzvN8gNM8HYqUrWEqtp0bFItOMNalwWxXCj3y598RLW0HOTFeJITcw6BlRZXxEy9ju0QM7usOnKwkvGNL4YAsMcAYcaiZ8ewE_qX8zoa9zTN2p4xnzWlduQ-F3OeHKC9lS2OiQLvo2H_o5XBiskpdsw5d2_5CNbHKfnqxqmQqGveylSzCPX7pIXL8EC_qVrdmoVDxpxBM5EsGL8L8LskuhR76HmRhbRK8frdOpugXw6S7tMBWUEyDRv_3zijpMmIkGMpmDgtWVkai8a8PtZHBHWb7MjUs3KtAduUbFwrjqhlmFP6fdpgIrCXbymrDzE33_nXW4dErrpaLO-w1v7oHDVCFgzpAAUDuzNYsHymaEsa3a2ac9hJRvl7oRJ3HChqeFJXm3nkaEEIPGaMIf1rf6UdHmyQ6hr6G7E3rX5lcdSsh066EiHpC9u0s23FjyvwCD8dETLlLmUsiWgWYmkM1D2NIKRMQ",
  "use": "sig",
}
`;

exports[`Kryptos (AKP) export should export pem 1`] = `
{
  "algorithm": "ML-DSA-65",
  "id": "3b9a051f-e1ec-562b-bf92-7cf92ec465ba",
  "privateKey": "-----BEGIN PRIVATE KEY-----
MIIP/gIBADALBglghkgBZQMEAxIEgg/qMIIP5gQgSX+SoGL+r/Wdtv5tOqmiORar
qSKlyNwcN1TE+OyGVzoEgg/AvDKJevgC4bhyW9vmdaFqMWwA7WeFaB3hnqj3traz
4R01EevSSgiwGFFSPqERxUik604Tp3Tf5aBDcTLX6R/RDRIkX/NBUOIKIN1OklOn
HgPvraeCXYxwn7Vt4zQjSOtOD8WZ73Ie8GvqAwIHeVbKE1oRTAamCXBumjVny5bC
jqsmaCMXAVVnEyZ3BlCBYzJYEUgWckVTBnSHAyVwUXAFgzSDgRYiAkRXYmFYZyAj
MmUFAhWEcjEGJkh0hTCIgDIIVwY1BYUEV3Y1ZjCFh3KAYVc3FXBFgmOAYDdAYkFk
CIRFGBQUcEJSgwE3cGgTcgFTJ0FISDIiVBGIhhIUJQFWdYJ1ZGFSRUKHCIMQhoYE
cQZCgTh3ZjIDhDJhWDMBNgcnEwhYGId3N4EjeGVnRVIgRyZhdYFEaDERVRdGdgM4
FmRDAjYGBUZwZ2FUVHcngQFoVHQzBHBWJShAhQB0cSRRMUQVgYaCOHRkMhVjBYFo
eAUBNHFDE1FWQBESI2BQJ1dheEgUeCcEMICDVkU0EjFQcDdHIkRUNWNjElMjAhEQ
I4NUYHE1YlVEeCZlgnQ1UweENWc1cwBIIlIngVdxMSKIY4EAFRFRgnciWBIIgXFG
IyQCNURkdzEYWBEiNkEVJgNDE4gGIyAGVBcQR0IEYQIxCFMAVWBxF0gjdFZQhChF
SCWIgUJicoNDZGgXcFQnYoiHB1YEhYIDFUBGRhhhAwF0UxIUYwdxNwdxYVZVgzEE
ZXIYg0c3YEhGAkAXAlFigUNkVHUUBABWI3EnUoEwZnRFInQlQoIWSCiIEUBnRVcC
IBdjRYNxV1EVRQFgM4VlFnETIhICJWViBwhkY1aGMjJQMHaHeIdGQBcGIXWAR0YU
GFNxZYh3VAhmBYYwJmYidEQEQwIkJmVAM1eEUWd2VmYmGAYFVWJ3YSUiAAh2dYJV
V4hGRTd3EkVhgIARBChXSDgWYWNINGUoI1BThENigGQ1EgZUN2YRMARxJiR4NBBC
dYFBAkSCAWNIgnQXEQYBRyEleBNmRIZnBkGFJxYlhDQ1ZoYoRHWCYWFoZUNlF2Rg
A1ZAZ0BEN1MDCAVTYocYZRUHhIc4BFYlgyZHEoGGN4BUSGIDUoYHCFBRd3CAE4OH
EmI1QEZjdQUTEjU2OHAEcwYlFiBCQ2UVVkQiEIJgUlQDUiVYEEQEhhJxM0Z1BAJy
NHQShSISIBOGFTcCUoV3NgcoBURHV3ZRQCeAaEAhEUBYcmNiNzACESFoFFQ4AIEV
dCWBY1E2BgUGSBYDFhRAB0N3ggczJCIoSHNlMoJ0d1cFgwAUYUMkdocVYBVWglKG
QxhzB2UVAhZYFCMwAWN3FoR0YIZHRihBFDA1hXEkZ4FkYWdGdFNzFHhhdnVzE1Nn
E1VoYxMWIiNIE0BFAnVBE3JjhYaFBkgBU4QAhUIANWFlATFnRgR3RXZ1NjiIQoIn
JUc2VIhwM3hDNzYxIREDBlIjKHVHcERTAXJXMFIBgDNEJFEjEmAoIwgScHAoJ4QR
InIjiGMBBmIogGdXhQAQUiaFRyU2NGUBYHERdEdRABEzJjCEQWEzEhBSIwcIhygx
g1BYGDEBB3hSdXFzhFM4BiWBSHAxdCVxUkFhKAMYBBR0GGA4Q3eDFXZkNTByBjJk
dmYBVINkNkhGBFcWVQQHBhIVGFBAAxRkiHY3IkZAF1CIBBAXVnBUBXKCFlESRYEF
Y2U1clEDQ1ZRVSYnVzKGOHeIYQNHFTU2iCNDUlNyNVh1gHBVMCNlGEFoSIiFQERE
ACETdgRXg4dxCIaEAFQnZoQDODNgNnV2cSBDQ2eBgCYTWEZQcoZ1QUGBY0AhBhVg
KBYUBWc4hUBgQicGQFNGAFBGYWZIBGYGQSVDEmFliHAgJYcFUChDNlGBcFBQY3YX
AiVQZjEwFoUkEnCENiZ2Y3cWYIgWNHhwInGHZXI0WFGIAAdAIQNhFyBCcXBhMYFo
MFchRgYwZ1AGIyQmcSiBNHFIJEImNhMREwIQA1AWF1AAAIRzgxF3UnZoZmc3BQKF
NwgEJCglYFYQiAIkRFd2QHUWOAYembmUKQZ10mpkIte6EZwOoQkU58KUYX5QG8li
vPx9kfTglZavVKn44AVnRlUuNEi8MzqzJtr9dfOLtWcd6PW6jYgaAPIEv7xBuaZt
VVCCpmASLKcLCzf0j/8ywPMiflr0WrlmkBDAcW9Z6RzHX7Fjbpzc6b/K5/F1ecuy
QpzdiDyqjeE6pnrBz3Yze44jrsZk8uREhQwCQAR0P1sjLxJTKscQ9T8yt73ASXRq
sgS7+2Ear9KnBzzXUFQDdiwylb76dCcoC/FXfdImnf0g9M3Q0HaNgrmIt7vDn2c7
BVfvFAfZx98qB1XndoZaS3zUHsESxbJJAYQ0dsXKVtQVOaSAA/RHRGMnfvxs9otr
+vVcs6IQrd97q2X1UyLNUjYq925qzQTgaReOosq4bAPHt1UOJhsDnK90CUgyiWMe
G1yxROao22Sgo593hBQbGrsJJGGykUfpOpkppJ9t0P2wVOkbpdsWo5lc0PVEnCcY
ahCtCSUly5a4i0D0XBL8sDhVI8MJPuHyeBqAaIIb8q9pzT7jAsEWy1I+s8gQQC/D
IQmOwEyFXmaELgAX6LjlSP5dVnvHvtlBo+qDE8ir41rMJr3/d/i7WPD05A/MhUUR
qGgYkZQ6grDUrpZMa8qU+msh14iK3i7SAwPw6m6uwtUar5Lko4akMqR8h4jc4ZlL
R1IjYbB8E1lFKtaJ5NMYwDDYxdGbirtexegzurcytZPzYMxqPPjzWrxAbSzfys3Z
aqr/Zi6cHr9p+6vsL7Nu0jZJ49N79NQ9Jt9uH8k4uyKYlCMQK5TaJePTkYp72WA+
j9/b2O4NqNir/HNVIQ8UYAtkzYcIIPGEGYcySWBoq9n0/SVXe/Qw+WwCZyWMZWNn
/6/EqAhT1wU4ye3+gM45V9rmnxCVBzSqUCUlZ+qWAQ7YCgv93RBH/uAm5WwmB+fL
BYQDqM3h2WrTxgTUCITD7MqIum5idyaaJ2CBYj5RCyRgGyGlQhj+U0WArwv4XSSZ
z8Nkgua690/cucLnP9qfOZTD2g2gnnJMC5AIzlo7jgA5wB0gkDnrye8QdpQLtEMv
gixf5FMMMJwFJZM8WlfxuG/bxLZoiC0974GFMTM1ohSWKLKRLsKI/9EjO8EJNegw
vYBV++kV0YvD2eLETdQJEHvpkdpMxTLaBLyEiSd/mHVqit3G8cQvgyHhhd1oXNTp
P+mOJYXR1Pp7TU4ZfKybUuuOqXFwVZjxeBoys04Qc4xw+SuMeu84oJxTR3mapUX5
h3vtbhq/Jjj2YXBbTNPpIk4i4W9Ucw/C87l/89LFTiyTchFbbJepndHu6KWQ9Kjz
rV2FeuKoYv9aDSiH9bkY/eP9ozdJmendhQjY5KZgzQdRQOWC24jsBTK5zZDXebi4
UAoEMRJ5yrH5Bk9f8b/yasSj3ULvmrZawqzY+8XqmptW3IrZGn3eAJ2jnVHWQB+d
Oa+GBN4YrzzeqLQ/NyPe7F5y7FLdXU9ymxSzsVa7M8nLejH2RKSAyMs7H9jrFbP4
hvSgG8owO2IhdzzHi/zj47yKl66Sj/QbmNm+jtiJ7gTXFYiB6t7wv0Xl+B+nMR2R
3J7zggJqbzlhmLow5LHMIso6izo/K32+gSS89bJ33kts7umgjRK7jXcIRDeTeK2Q
OQS+9GUcVX94V47Maz4Q3YXvLKbeWxx3y9MZ2WVXwq4P3SpP2SRfA4gRVSJAcMHJ
jnPq1y6A/rVefdR5Qxd4OoafiGCLBNNHkp2FncVvVBdy5p8KyBBZHVEVozTtR8u3
WuJplI/n81ik4/v4zpj5DD+chIYg6MvMa/3aQfi97vZE9O8ThnU3yle7YwNhMJZK
KKVdg+pLO0+RZCfTI+bqwHI45eqX10qdXQygUQAE9kp6nq2Sn9zw4L4FrBI4q7uR
GfoRyr9b2Eo4/EdMa1qyLKeDgv74JzTLmkU0N0qAQ/5rQY5Y8PT4WzQqrRCMYIt5
Uea4TcJbeJcM6ucj/iV3Ep36an2tTv3a7GkoJQ5OlD4QDcgoTRgOmHtbq5ncQFuq
zUFee8FI/DCdkmKW7fRWvfnCYBEnlR0sb2bh4Gqcvz6c2ZMglBEmEENqgXZBAXJS
BqbPHxPvUButP9qReiQAKe7xt0j5o8avQZhgnBK5WOHoWJEeIHBZuLDncp7fjjqS
sSkOVoxSHCEDhxx6PT5ogEUDMq5YqLpHhcky5eYFqxHfrQ6MgC1R5vKxwfPkeqle
PND2CcFM0yWeS+Sy8US4lEMJHYwSKjlw1I1QWTem2GllrlzQFTgZ2jSXHRzqUTC1
1pxlMkujJA2IbeLY/nrJ3GSTMshH2X0g0o9MZhVN3QDrKC2y9re3CgVnNLtt12Mx
/et+d6LmltAMZKk1FO+Kr3d7fuQER+cX0Chh/pkBqdLg3f9MR2mN2/giVpOA2AdC
cOrWRj2DtWgY8VgFGF/F5kE1aasrdjdTbR3RW1hRBhnw5BjuIo3CuG5C6f7sKS+S
EccXDBttTRsZClroIOxq7m5Vu5a+Gfsvp8azUxmArDDJzuJ5vvyBjRbrSJs2MPVj
K3nzXXnHP66BhV3U2Yaz+H1bvwrJF2IqjJsNCKJJum1IM3RVl35C0hoyieVKL/3/
D1p7Hset9E9TvRioFIy5icFm83DNvoCPyiMYoR69yYkTz77TEqJ3uTrpGC+esmQP
Xd+8q0Z4ONkTz9g6zfr+CwMHQWfecXLFmtZhY7hUzwNPYqJ0UcGcHJ5nTm/xX35U
J/0ssibxp8x3/8KjclkFjUScP19AZtqkFyLoCiPOuMv02Hav9VdOmPDrjN7lxFqQ
oZXuVkAWQCLzG1oRqJKGGNK7kqCFyBDJdq1YVve+aY8L2vcfv50dfuyahxtZG5+x
/Bgpdd7MWL/lB3wV5BIM1Yrqvu5C5hGWMt3aoqL3Pd7vXwVB1yNhQWdE1xErspPu
mVSHBl/PKi33w1WlgutRdPtPoJRUKnPpulEO3Zge2v8z0ETnYqdstWB3ULxOfMwU
UdVmRJzfLxkofKkrOwFAnkZlqsLSziFIyx1zvek52Y4qUQ9Y18Dnp+lZlXvYzq7+
7cFn0TPBCfogoU6O6Hhmt2+cArRca4CFxpjTc8CR0cUUfkVNg5Q0Kp385XwNLant
N3ax2q7AevB1ceDxufOC+WYsdd2m3Odg2dISTdwx8L4+hH2tZdbu/iow4fumc8Sk
Zy4M+XZxZE1B79m/mz6IrDc+b79MOTQszbZw/g0/TTJa4En0FgGn0Y98uqdGlghB
qs6lXVHCI2B/Cr9j8efQwRmO0N5JR4eDjjxyjAH5OTS21T7Gc6/DzFtf2V5MZlpc
LlNPWkzeGtLZ/VQuonOtxTAY
-----END PRIVATE KEY-----
",
  "publicKey": "-----BEGIN PUBLIC KEY-----
MIIHsjALBglghkgBZQMEAxIDggehALwyiXr4AuG4clvb5nWhajFsAO1nhWgd4Z6o
97a2s+Eda+IdckZsw7CtLB/96c7d6tM12NTp66ozUiu1pzAZrtGgl8ksjkI/rqyE
xCLWGWyDrGQlLL142mmA2K47QhXSaelro5VSO8EIgvHRjKlShC99Y198efajp0qQ
EQQVzKU3Lv4KH5Iw7K0zEgDEGDiS0ULfZ9v+jFHVW9cveCfiwWyHV8YQIRbrth0f
KOK3aiVuXyV3NmZznQrzhCmNgCKIClm6BymyCZxv++tz+QghNUWhEcFofo4cqbl2
oWtm0yEouNN5N4V4A+j42cS8f9Gd7rlELT/srukq9EC7bbYLiMib2hSKvGSeqpY9
LuWN5GANGJ1DopDd7PnPooD6Js/D7Fb9flyUHlrtmYciH6Iuk3IPZL9ZR43ApYTJ
TuCiTVlPxMRsq4eroM6NPnq8+r79Fk+vc7XQtRZDU0OIIz9l/+7J2kkw4HKW3gpN
oFhsuTR9gZYi6QC0g3WSv+Tf2AWrNEjhHGt7BkNig1rytura64s663GtDW38OM76
4+xBP4tjAX3GKwMORFfVDmQzLC8j5vx+tEd4Zgm8UIX2lWIiFpUwy2Ojb5URHIjr
Hn9+Ii7M/56/j18JcQuKDsgY/eKhyWrkG4DmjzEyzBWtSmTME26NB9+GVwAvt8CO
n970Q+qRZfbSbMqMwiUF/7yAKfYsyfutdG0BzS3u/SFO4f4aVPQqxUYtteV4LmQ0
KivHhBQlXhjJrPvJ903aOa2XE1hfpJr5bnKBIonvhVo4PdbQq8lKb7DArikbXfQr
gR90OWobpE2IFYo4GvzABFmLfbCVb3nsVQuBIzNff1ASlY3ZVI2Z6K5hLIUqapNY
wJHi/SMJPMLcsboI+Azf4E1dS/rS5Qoo1u3NbfTnbqJnxZGF3t6oPN82FMdQVLoS
FBADWzVKDc2jY8ZkaimuFV0KL1X0lOi1LqisuUu8sv2CQ5WhATEshOiU7REmk0+E
yvYO/uEcVoCGcR6FNtXC16NxIAZEyT9c8mgn+Q2eO6Kbwq6wJrRoyU2zoUR/PVqR
RhRibtPBXjsNHvWAtRpZiSizMSYDJXtr+87X1nq0w/LLP0npXRH0r1nQEsKD39DX
b5Jc+kbKZ3x9gl3QNawPzSZwvl1O2ZL3TWeUkkS1uapQmN98QTkhlW8+ZG2OfEci
XpEk2lIDDJH0GQLQiclEEHBMAM9NndEync7rGO4al/EGD0lP2+RWUS6D2NJ1sxOo
4teAECZPWSD6Dx/3l7uNUb6eliVhJ2nENVPyAehTCrwDwqhZkKLS7/7y3Lz0jJfk
11hG0uFkE6+5uHUE9LdB2vJsBlLDPTYdDsLRs2rdllIxi4MuZsvclVI3FQ+R84Va
Q+Ur2CQnTtf9rU95NL7KabKMuu7Je/LFPDx38RRWWHqTXDTUbHd4OHIGGaa2qCFL
79Nl79Imfoo0iTJHhPlq9fRR7w+s2ufiIBQbq4sMmiAPel/mxc2PrIgSKRQ1VcSq
Iv52Hn/O906Wj2hFeDs5rZYkPKA2tVA/i7X89cesfyeskYzwxpQKu2dRC+IvgXcc
J7RqmmYYaHiQmCIeARDzM6Bmy6OVXvUoOdBEJKnCDtvAOf5v4VCV8r+9eVDe/SrD
Aoz0EqOlCWepYYFU8BEzAi3i32CSTBD4etwzcMgpTQVIHYCrXzlbB6IXxQS9SEXZ
ORYKzlGrPRs4MdnJIjYjd3YYC6XykeMuV21nK0fRlRA68u/db6+2HFeMQ5bcOWXN
7HQb09CsUjrNMoiIx1Za9Rfr0J6ZaDAEPkfZ2PeHzHIRAbDTusEDYhfbQYX3Q8js
Lp3GnVGcsX1aJDImti2PyOf4izDi01u1PbCYI0o63CDZwRzGq854GVMEyyNyY1Vj
BpG2SLFNvoJvApWZ4OOGVQmiYwzTtNnOQgZFUwYTi+3Pj2OMeFZ2cg8WoBiPhv2E
sg7YuwNcrOsM1/4Gxwhomr2C0jQp0soy0O6CZ5Wi1yQAH3Zj4fWEbIziMBkU4FW/
DT7D3WfxNYzNIQTRaUwG4aH0eAUEwsDgVgUS/m6oqEm/joEvMCaRQ/pf0kl1i5dg
8cfsarg0TAKfiGtfaUtY2YZuja2Bc1S3s1P5H/ohoyf8s7zfIDTPB2KlK1hKradG
xSLTjDWpcFsVwo98uffES1tBzkxXiSE3MOgZUWV8RMvY7tEDO7rDpysJLxjS+GAL
DHAGHGomfHsBP6l/M6Gvc0zdqeMZ81pXbkPhdznhygvZUtjokC76Nh/6OVwYrJKX
bMOXdv+QjWxyn56sapkKhr3spUswj1+6SFy/BAv6la3ZqFQ8acQTORLBi/C/C7JL
oUe+h5kYW0SvH63TqboF8Oku7TAVlBMg0b/984o6TJiJBjKZg4LVlZGovGvD7WRw
R1m+zI1LNyrQHblGxcK46oZZhT+n3aYCKwl28pqw8xN9/511uHRK66WizvsNb+6B
w1QhYM6QAFA7szWLB8pmhLGt2tmnPYSUb5e6ESdxwoanhSV5t55GhBCDxmjCH9a3
+lHR5skOoa+huxN61+ZXHUrIdOuhIh6QvbtLNtxY8r8Ag/HREy5S5lLIloFmJpDN
Q9jSCkTE
-----END PUBLIC KEY-----
",
  "type": "AKP",
  "use": "sig",
}
`;

exports[`Kryptos (AKP) to should return db 1`] = `
{
  "algorithm": "ML-DSA-65",
  "certificateChain": [],
  "createdAt": 2023-01-01T08:00:00.000Z,
  "curve": null,
  "encryption": null,
  "expiresAt": 2099-01-01T08:00:00.000Z,
  "hidden": false,
  "id": "3b9a051f-e1ec-562b-bf92-7cf92ec465ba",
  "isExternal": false,
  "issuer": "https://example.com",
  "jwksUri": "https://example.com/.well-known/jwks.json",
  "notBefore": 2023-01-01T08:00:00.000Z,
  "operations": [
    "sign",
    "verify",
  ],
  "ownerId": "f02c2d0c-44ee-5e4e-8b3b-39d46924d227",
  "privateKey": "MIIP_gIBADALBglghkgBZQMEAxIEgg_qMIIP5gQgSX-SoGL-r_Wdtv5tOqmiORarqSKlyNwcN1TE-OyGVzoEgg_AvDKJevgC4bhyW9vmdaFqMWwA7WeFaB3hnqj3traz4R01EevSSgiwGFFSPqERxUik604Tp3Tf5aBDcTLX6R_RDRIkX_NBUOIKIN1OklOnHgPvraeCXYxwn7Vt4zQjSOtOD8WZ73Ie8GvqAwIHeVbKE1oRTAamCXBumjVny5bCjqsmaCMXAVVnEyZ3BlCBYzJYEUgWckVTBnSHAyVwUXAFgzSDgRYiAkRXYmFYZyAjMmUFAhWEcjEGJkh0hTCIgDIIVwY1BYUEV3Y1ZjCFh3KAYVc3FXBFgmOAYDdAYkFkCIRFGBQUcEJSgwE3cGgTcgFTJ0FISDIiVBGIhhIUJQFWdYJ1ZGFSRUKHCIMQhoYEcQZCgTh3ZjIDhDJhWDMBNgcnEwhYGId3N4EjeGVnRVIgRyZhdYFEaDERVRdGdgM4FmRDAjYGBUZwZ2FUVHcngQFoVHQzBHBWJShAhQB0cSRRMUQVgYaCOHRkMhVjBYFoeAUBNHFDE1FWQBESI2BQJ1dheEgUeCcEMICDVkU0EjFQcDdHIkRUNWNjElMjAhEQI4NUYHE1YlVEeCZlgnQ1UweENWc1cwBIIlIngVdxMSKIY4EAFRFRgnciWBIIgXFGIyQCNURkdzEYWBEiNkEVJgNDE4gGIyAGVBcQR0IEYQIxCFMAVWBxF0gjdFZQhChFSCWIgUJicoNDZGgXcFQnYoiHB1YEhYIDFUBGRhhhAwF0UxIUYwdxNwdxYVZVgzEEZXIYg0c3YEhGAkAXAlFigUNkVHUUBABWI3EnUoEwZnRFInQlQoIWSCiIEUBnRVcCIBdjRYNxV1EVRQFgM4VlFnETIhICJWViBwhkY1aGMjJQMHaHeIdGQBcGIXWAR0YUGFNxZYh3VAhmBYYwJmYidEQEQwIkJmVAM1eEUWd2VmYmGAYFVWJ3YSUiAAh2dYJVV4hGRTd3EkVhgIARBChXSDgWYWNINGUoI1BThENigGQ1EgZUN2YRMARxJiR4NBBCdYFBAkSCAWNIgnQXEQYBRyEleBNmRIZnBkGFJxYlhDQ1ZoYoRHWCYWFoZUNlF2RgA1ZAZ0BEN1MDCAVTYocYZRUHhIc4BFYlgyZHEoGGN4BUSGIDUoYHCFBRd3CAE4OHEmI1QEZjdQUTEjU2OHAEcwYlFiBCQ2UVVkQiEIJgUlQDUiVYEEQEhhJxM0Z1BAJyNHQShSISIBOGFTcCUoV3NgcoBURHV3ZRQCeAaEAhEUBYcmNiNzACESFoFFQ4AIEVdCWBY1E2BgUGSBYDFhRAB0N3ggczJCIoSHNlMoJ0d1cFgwAUYUMkdocVYBVWglKGQxhzB2UVAhZYFCMwAWN3FoR0YIZHRihBFDA1hXEkZ4FkYWdGdFNzFHhhdnVzE1NnE1VoYxMWIiNIE0BFAnVBE3JjhYaFBkgBU4QAhUIANWFlATFnRgR3RXZ1NjiIQoInJUc2VIhwM3hDNzYxIREDBlIjKHVHcERTAXJXMFIBgDNEJFEjEmAoIwgScHAoJ4QRInIjiGMBBmIogGdXhQAQUiaFRyU2NGUBYHERdEdRABEzJjCEQWEzEhBSIwcIhygxg1BYGDEBB3hSdXFzhFM4BiWBSHAxdCVxUkFhKAMYBBR0GGA4Q3eDFXZkNTByBjJkdmYBVINkNkhGBFcWVQQHBhIVGFBAAxRkiHY3IkZAF1CIBBAXVnBUBXKCFlESRYEFY2U1clEDQ1ZRVSYnVzKGOHeIYQNHFTU2iCNDUlNyNVh1gHBVMCNlGEFoSIiFQEREACETdgRXg4dxCIaEAFQnZoQDODNgNnV2cSBDQ2eBgCYTWEZQcoZ1QUGBY0AhBhVgKBYUBWc4hUBgQicGQFNGAFBGYWZIBGYGQSVDEmFliHAgJYcFUChDNlGBcFBQY3YXAiVQZjEwFoUkEnCENiZ2Y3cWYIgWNHhwInGHZXI0WFGIAAdAIQNhFyBCcXBhMYFoMFchRgYwZ1AGIyQmcSiBNHFIJEImNhMREwIQA1AWF1AAAIRzgxF3UnZoZmc3BQKFNwgEJCglYFYQiAIkRFd2QHUWOAYembmUKQZ10mpkIte6EZwOoQkU58KUYX5QG8livPx9kfTglZavVKn44AVnRlUuNEi8MzqzJtr9dfOLtWcd6PW6jYgaAPIEv7xBuaZtVVCCpmASLKcLCzf0j_8ywPMiflr0WrlmkBDAcW9Z6RzHX7Fjbpzc6b_K5_F1ecuyQpzdiDyqjeE6pnrBz3Yze44jrsZk8uREhQwCQAR0P1sjLxJTKscQ9T8yt73ASXRqsgS7-2Ear9KnBzzXUFQDdiwylb76dCcoC_FXfdImnf0g9M3Q0HaNgrmIt7vDn2c7BVfvFAfZx98qB1XndoZaS3zUHsESxbJJAYQ0dsXKVtQVOaSAA_RHRGMnfvxs9otr-vVcs6IQrd97q2X1UyLNUjYq925qzQTgaReOosq4bAPHt1UOJhsDnK90CUgyiWMeG1yxROao22Sgo593hBQbGrsJJGGykUfpOpkppJ9t0P2wVOkbpdsWo5lc0PVEnCcYahCtCSUly5a4i0D0XBL8sDhVI8MJPuHyeBqAaIIb8q9pzT7jAsEWy1I-s8gQQC_DIQmOwEyFXmaELgAX6LjlSP5dVnvHvtlBo-qDE8ir41rMJr3_d_i7WPD05A_MhUURqGgYkZQ6grDUrpZMa8qU-msh14iK3i7SAwPw6m6uwtUar5Lko4akMqR8h4jc4ZlLR1IjYbB8E1lFKtaJ5NMYwDDYxdGbirtexegzurcytZPzYMxqPPjzWrxAbSzfys3Zaqr_Zi6cHr9p-6vsL7Nu0jZJ49N79NQ9Jt9uH8k4uyKYlCMQK5TaJePTkYp72WA-j9_b2O4NqNir_HNVIQ8UYAtkzYcIIPGEGYcySWBoq9n0_SVXe_Qw-WwCZyWMZWNn_6_EqAhT1wU4ye3-gM45V9rmnxCVBzSqUCUlZ-qWAQ7YCgv93RBH_uAm5WwmB-fLBYQDqM3h2WrTxgTUCITD7MqIum5idyaaJ2CBYj5RCyRgGyGlQhj-U0WArwv4XSSZz8Nkgua690_cucLnP9qfOZTD2g2gnnJMC5AIzlo7jgA5wB0gkDnrye8QdpQLtEMvgixf5FMMMJwFJZM8WlfxuG_bxLZoiC0974GFMTM1ohSWKLKRLsKI_9EjO8EJNegwvYBV--kV0YvD2eLETdQJEHvpkdpMxTLaBLyEiSd_mHVqit3G8cQvgyHhhd1oXNTpP-mOJYXR1Pp7TU4ZfKybUuuOqXFwVZjxeBoys04Qc4xw-SuMeu84oJxTR3mapUX5h3vtbhq_Jjj2YXBbTNPpIk4i4W9Ucw_C87l_89LFTiyTchFbbJepndHu6KWQ9KjzrV2FeuKoYv9aDSiH9bkY_eP9ozdJmendhQjY5KZgzQdRQOWC24jsBTK5zZDXebi4UAoEMRJ5yrH5Bk9f8b_yasSj3ULvmrZawqzY-8XqmptW3IrZGn3eAJ2jnVHWQB-dOa-GBN4YrzzeqLQ_NyPe7F5y7FLdXU9ymxSzsVa7M8nLejH2RKSAyMs7H9jrFbP4hvSgG8owO2IhdzzHi_zj47yKl66Sj_QbmNm-jtiJ7gTXFYiB6t7wv0Xl-B-nMR2R3J7zggJqbzlhmLow5LHMIso6izo_K32-gSS89bJ33kts7umgjRK7jXcIRDeTeK2QOQS-9GUcVX94V47Maz4Q3YXvLKbeWxx3y9MZ2WVXwq4P3SpP2SRfA4gRVSJAcMHJjnPq1y6A_rVefdR5Qxd4OoafiGCLBNNHkp2FncVvVBdy5p8KyBBZHVEVozTtR8u3WuJplI_n81ik4_v4zpj5DD-chIYg6MvMa_3aQfi97vZE9O8ThnU3yle7YwNhMJZKKKVdg-pLO0-RZCfTI-bqwHI45eqX10qdXQygUQAE9kp6nq2Sn9zw4L4FrBI4q7uRGfoRyr9b2Eo4_EdMa1qyLKeDgv74JzTLmkU0N0qAQ_5rQY5Y8PT4WzQqrRCMYIt5Uea4TcJbeJcM6ucj_iV3Ep36an2tTv3a7GkoJQ5OlD4QDcgoTRgOmHtbq5ncQFuqzUFee8FI_DCdkmKW7fRWvfnCYBEnlR0sb2bh4Gqcvz6c2ZMglBEmEENqgXZBAXJSBqbPHxPvUButP9qReiQAKe7xt0j5o8avQZhgnBK5WOHoWJEeIHBZuLDncp7fjjqSsSkOVoxSHCEDhxx6PT5ogEUDMq5YqLpHhcky5eYFqxHfrQ6MgC1R5vKxwfPkeqlePND2CcFM0yWeS-Sy8US4lEMJHYwSKjlw1I1QWTem2GllrlzQFTgZ2jSXHRzqUTC11pxlMkujJA2IbeLY_nrJ3GSTMshH2X0g0o9MZhVN3QDrKC2y9re3CgVnNLtt12Mx_et-d6LmltAMZKk1FO-Kr3d7fuQER-cX0Chh_pkBqdLg3f9MR2mN2_giVpOA2AdCcOrWRj2DtWgY8VgFGF_F5kE1aasrdjdTbR3RW1hRBhnw5BjuIo3CuG5C6f7sKS-SEccXDBttTRsZClroIOxq7m5Vu5a-Gfsvp8azUxmArDDJzuJ5vvyBjRbrSJs2MPVjK3nzXXnHP66BhV3U2Yaz-H1bvwrJF2IqjJsNCKJJum1IM3RVl35C0hoyieVKL_3_D1p7Hset9E9TvRioFIy5icFm83DNvoCPyiMYoR69yYkTz77TEqJ3uTrpGC-esmQPXd-8q0Z4ONkTz9g6zfr-CwMHQWfecXLFmtZhY7hUzwNPYqJ0UcGcHJ5nTm_xX35UJ_0ssibxp8x3_8KjclkFjUScP19AZtqkFyLoCiPOuMv02Hav9VdOmPDrjN7lxFqQoZXuVkAWQCLzG1oRqJKGGNK7kqCFyBDJdq1YVve-aY8L2vcfv50dfuyahxtZG5-x_Bgpdd7MWL_lB3wV5BIM1Yrqvu5C5hGWMt3aoqL3Pd7vXwVB1yNhQWdE1xErspPumVSHBl_PKi33w1WlgutRdPtPoJRUKnPpulEO3Zge2v8z0ETnYqdstWB3ULxOfMwUUdVmRJzfLxkofKkrOwFAnkZlqsLSziFIyx1zvek52Y4qUQ9Y18Dnp-lZlXvYzq7-7cFn0TPBCfogoU6O6Hhmt2-cArRca4CFxpjTc8CR0cUUfkVNg5Q0Kp385XwNLantN3ax2q7AevB1ceDxufOC-WYsdd2m3Odg2dISTdwx8L4-hH2tZdbu_iow4fumc8SkZy4M-XZxZE1B79m_mz6IrDc-b79MOTQszbZw_g0_TTJa4En0FgGn0Y98uqdGlghBqs6lXVHCI2B_Cr9j8efQwRmO0N5JR4eDjjxyjAH5OTS21T7Gc6_DzFtf2V5MZlpcLlNPWkzeGtLZ_VQuonOtxTAY",
  "publicKey": "MIIHsjALBglghkgBZQMEAxIDggehALwyiXr4AuG4clvb5nWhajFsAO1nhWgd4Z6o97a2s-Eda-IdckZsw7CtLB_96c7d6tM12NTp66ozUiu1pzAZrtGgl8ksjkI_rqyExCLWGWyDrGQlLL142mmA2K47QhXSaelro5VSO8EIgvHRjKlShC99Y198efajp0qQEQQVzKU3Lv4KH5Iw7K0zEgDEGDiS0ULfZ9v-jFHVW9cveCfiwWyHV8YQIRbrth0fKOK3aiVuXyV3NmZznQrzhCmNgCKIClm6BymyCZxv--tz-QghNUWhEcFofo4cqbl2oWtm0yEouNN5N4V4A-j42cS8f9Gd7rlELT_srukq9EC7bbYLiMib2hSKvGSeqpY9LuWN5GANGJ1DopDd7PnPooD6Js_D7Fb9flyUHlrtmYciH6Iuk3IPZL9ZR43ApYTJTuCiTVlPxMRsq4eroM6NPnq8-r79Fk-vc7XQtRZDU0OIIz9l_-7J2kkw4HKW3gpNoFhsuTR9gZYi6QC0g3WSv-Tf2AWrNEjhHGt7BkNig1rytura64s663GtDW38OM764-xBP4tjAX3GKwMORFfVDmQzLC8j5vx-tEd4Zgm8UIX2lWIiFpUwy2Ojb5URHIjrHn9-Ii7M_56_j18JcQuKDsgY_eKhyWrkG4DmjzEyzBWtSmTME26NB9-GVwAvt8COn970Q-qRZfbSbMqMwiUF_7yAKfYsyfutdG0BzS3u_SFO4f4aVPQqxUYtteV4LmQ0KivHhBQlXhjJrPvJ903aOa2XE1hfpJr5bnKBIonvhVo4PdbQq8lKb7DArikbXfQrgR90OWobpE2IFYo4GvzABFmLfbCVb3nsVQuBIzNff1ASlY3ZVI2Z6K5hLIUqapNYwJHi_SMJPMLcsboI-Azf4E1dS_rS5Qoo1u3NbfTnbqJnxZGF3t6oPN82FMdQVLoSFBADWzVKDc2jY8ZkaimuFV0KL1X0lOi1LqisuUu8sv2CQ5WhATEshOiU7REmk0-EyvYO_uEcVoCGcR6FNtXC16NxIAZEyT9c8mgn-Q2eO6Kbwq6wJrRoyU2zoUR_PVqRRhRibtPBXjsNHvWAtRpZiSizMSYDJXtr-87X1nq0w_LLP0npXRH0r1nQEsKD39DXb5Jc-kbKZ3x9gl3QNawPzSZwvl1O2ZL3TWeUkkS1uapQmN98QTkhlW8-ZG2OfEciXpEk2lIDDJH0GQLQiclEEHBMAM9NndEync7rGO4al_EGD0lP2-RWUS6D2NJ1sxOo4teAECZPWSD6Dx_3l7uNUb6eliVhJ2nENVPyAehTCrwDwqhZkKLS7_7y3Lz0jJfk11hG0uFkE6-5uHUE9LdB2vJsBlLDPTYdDsLRs2rdllIxi4MuZsvclVI3FQ-R84VaQ-Ur2CQnTtf9rU95NL7KabKMuu7Je_LFPDx38RRWWHqTXDTUbHd4OHIGGaa2qCFL79Nl79Imfoo0iTJHhPlq9fRR7w-s2ufiIBQbq4sMmiAPel_mxc2PrIgSKRQ1VcSqIv52Hn_O906Wj2hFeDs5rZYkPKA2tVA_i7X89cesfyeskYzwxpQKu2dRC-IvgXccJ7RqmmYYaHiQmCIeARDzM6Bmy6OVXvUoOdBEJKnCDtvAOf5v4VCV8r-9eVDe_SrDAoz0EqOlCWepYYFU8BEzAi3i32CSTBD4etwzcMgpTQVIHYCrXzlbB6IXxQS9SEXZORYKzlGrPRs4MdnJIjYjd3YYC6XykeMuV21nK0fRlRA68u_db6-2HFeMQ5bcOWXN7HQb09CsUjrNMoiIx1Za9Rfr0J6ZaDAEPkfZ2PeHzHIRAbDTusEDYhfbQYX3Q8jsLp3GnVGcsX1aJDImti2PyOf4izDi01u1PbCYI0o63CDZwRzGq854GVMEyyNyY1VjBpG2SLFNvoJvApWZ4OOGVQmiYwzTtNnOQgZFUwYTi-3Pj2OMeFZ2cg8WoBiPhv2Esg7YuwNcrOsM1_4Gxwhomr2C0jQp0soy0O6CZ5Wi1yQAH3Zj4fWEbIziMBkU4FW_DT7D3WfxNYzNIQTRaUwG4aH0eAUEwsDgVgUS_m6oqEm_joEvMCaRQ_pf0kl1i5dg8cfsarg0TAKfiGtfaUtY2YZuja2Bc1S3s1P5H_ohoyf8s7zfIDTPB2KlK1hKradGxSLTjDWpcFsVwo98uffES1tBzkxXiSE3MOgZUWV8RMvY7tEDO7rDpysJLxjS-GALDHAGHGomfHsBP6l_M6Gvc0zdqeMZ81pXbkPhdznhygvZUtjokC76Nh_6OVwYrJKXbMOXdv-QjWxyn56sapkKhr3spUswj1-6SFy_BAv6la3ZqFQ8acQTORLBi_C_C7JLoUe-h5kYW0SvH63TqboF8Oku7TAVlBMg0b_984o6TJiJBjKZg4LVlZGovGvD7WRwR1m-zI1LNyrQHblGxcK46oZZhT-n3aYCKwl28pqw8xN9_511uHRK66WizvsNb-6Bw1QhYM6QAFA7szWLB8pmhLGt2tmnPYSUb5e6ESdxwoanhSV5t55GhBCDxmjCH9a3-lHR5skOoa-huxN61-ZXHUrIdOuhIh6QvbtLNtxY8r8Ag_HREy5S5lLIloFmJpDNQ9jSCkTE",
  "purpose": "test",
  "type": "AKP",
  "use": "sig",
}
`;

exports[`Kryptos (AKP) to should return json 1`] = `
{
  "algorithm": "ML-DSA-65",
  "certificateChain": [],
  "certificateThumbprint": null,
  "createdAt": 2023-01-01T08:00:00.000Z,
  "curve": null,
  "encryption": null,
  "expiresAt": 2099-01-01T08:00:00.000Z,
  "expiresIn": 2366841600,
  "hasCertificate": false,
  "hasPrivateKey": true,
  "hasPublicKey": true,
  "hidden": false,
  "id": "3b9a051f-e1ec-562b-bf92-7cf92ec465ba",
  "isActive": true,
  "isExpired": false,
  "isExternal": false,
  "issuer": "https://example.com",
  "jwksUri": "https://example.com/.well-known/jwks.json",
  "modulus": null,
  "notBefore": 2023-01-01T08:00:00.000Z,
  "operations": [
    "sign",
    "verify",
  ],
  "ownerId": "f02c2d0c-44ee-5e4e-8b3b-39d46924d227",
  "purpose": "test",
  "thumbprint": "BOXXj_OgD7SZEukI-ekGb9h9OV-TyBwiG_Ft_g9E1Bo",
  "type": "AKP",
  "use": "sig",
}
`;

exports[`Kryptos (AKP) to should return jwk with private key 1`] = `
{
  "alg": "ML-DSA-65",
  "exp": 4070937600,
  "iat": 1672560000,
  "iss": "https://example.com",
  "jku": "https://example.com/.well-known/jwks.json",
  "key_ops": [
    "sign",
    "verify",
  ],
  "kid": "3b9a051f-e1ec-562b-bf92-7cf92ec465ba",
  "kty": "AKP",
  "nbf": 1672560000,
  "owner_id": "f02c2d0c-44ee-5e4e-8b3b-39d46924d227",
  "priv": "SX-SoGL-r_Wdtv5tOqmiORarqSKlyNwcN1TE-OyGVzo",
  "pub": "vDKJevgC4bhyW9vmdaFqMWwA7WeFaB3hnqj3traz4R1r4h1yRmzDsK0sH_3pzt3q0zXY1OnrqjNSK7WnMBmu0aCXySyOQj-urITEItYZbIOsZCUsvXjaaYDYrjtCFdJp6WujlVI7wQiC8dGMqVKEL31jX3x59qOnSpARBBXMpTcu_gofkjDsrTMSAMQYOJLRQt9n2_6MUdVb1y94J-LBbIdXxhAhFuu2HR8o4rdqJW5fJXc2ZnOdCvOEKY2AIogKWboHKbIJnG_763P5CCE1RaERwWh-jhypuXaha2bTISi403k3hXgD6PjZxLx_0Z3uuUQtP-yu6Sr0QLtttguIyJvaFIq8ZJ6qlj0u5Y3kYA0YnUOikN3s-c-igPomz8PsVv1-XJQeWu2ZhyIfoi6Tcg9kv1lHjcClhMlO4KJNWU_ExGyrh6ugzo0-erz6vv0WT69ztdC1FkNTQ4gjP2X_7snaSTDgcpbeCk2gWGy5NH2BliLpALSDdZK_5N_YBas0SOEca3sGQ2KDWvK26trrizrrca0Nbfw4zvrj7EE_i2MBfcYrAw5EV9UOZDMsLyPm_H60R3hmCbxQhfaVYiIWlTDLY6NvlREciOsef34iLsz_nr-PXwlxC4oOyBj94qHJauQbgOaPMTLMFa1KZMwTbo0H34ZXAC-3wI6f3vRD6pFl9tJsyozCJQX_vIAp9izJ-610bQHNLe79IU7h_hpU9CrFRi215XguZDQqK8eEFCVeGMms-8n3Tdo5rZcTWF-kmvlucoEiie-FWjg91tCryUpvsMCuKRtd9CuBH3Q5ahukTYgVijga_MAEWYt9sJVveexVC4EjM19_UBKVjdlUjZnormEshSpqk1jAkeL9Iwk8wtyxugj4DN_gTV1L-tLlCijW7c1t9OduomfFkYXe3qg83zYUx1BUuhIUEANbNUoNzaNjxmRqKa4VXQovVfSU6LUuqKy5S7yy_YJDlaEBMSyE6JTtESaTT4TK9g7-4RxWgIZxHoU21cLXo3EgBkTJP1zyaCf5DZ47opvCrrAmtGjJTbOhRH89WpFGFGJu08FeOw0e9YC1GlmJKLMxJgMle2v7ztfWerTD8ss_SeldEfSvWdASwoPf0Ndvklz6RspnfH2CXdA1rA_NJnC-XU7ZkvdNZ5SSRLW5qlCY33xBOSGVbz5kbY58RyJekSTaUgMMkfQZAtCJyUQQcEwAz02d0TKdzusY7hqX8QYPSU_b5FZRLoPY0nWzE6ji14AQJk9ZIPoPH_eXu41Rvp6WJWEnacQ1U_IB6FMKvAPCqFmQotLv_vLcvPSMl-TXWEbS4WQTr7m4dQT0t0Ha8mwGUsM9Nh0OwtGzat2WUjGLgy5my9yVUjcVD5HzhVpD5SvYJCdO1_2tT3k0vsppsoy67sl78sU8PHfxFFZYepNcNNRsd3g4cgYZpraoIUvv02Xv0iZ-ijSJMkeE-Wr19FHvD6za5-IgFBuriwyaIA96X-bFzY-siBIpFDVVxKoi_nYef873TpaPaEV4OzmtliQ8oDa1UD-Ltfz1x6x_J6yRjPDGlAq7Z1EL4i-BdxwntGqaZhhoeJCYIh4BEPMzoGbLo5Ve9Sg50EQkqcIO28A5_m_hUJXyv715UN79KsMCjPQSo6UJZ6lhgVTwETMCLeLfYJJMEPh63DNwyClNBUgdgKtfOVsHohfFBL1IRdk5FgrOUas9Gzgx2ckiNiN3dhgLpfKR4y5XbWcrR9GVEDry791vr7YcV4xDltw5Zc3sdBvT0KxSOs0yiIjHVlr1F-vQnploMAQ-R9nY94fMchEBsNO6wQNiF9tBhfdDyOwuncadUZyxfVokMia2LY_I5_iLMOLTW7U9sJgjSjrcINnBHMarzngZUwTLI3JjVWMGkbZIsU2-gm8ClZng44ZVCaJjDNO02c5CBkVTBhOL7c-PY4x4VnZyDxagGI-G_YSyDti7A1ys6wzX_gbHCGiavYLSNCnSyjLQ7oJnlaLXJAAfdmPh9YRsjOIwGRTgVb8NPsPdZ_E1jM0hBNFpTAbhofR4BQTCwOBWBRL-bqioSb-OgS8wJpFD-l_SSXWLl2Dxx-xquDRMAp-Ia19pS1jZhm6NrYFzVLezU_kf-iGjJ_yzvN8gNM8HYqUrWEqtp0bFItOMNalwWxXCj3y598RLW0HOTFeJITcw6BlRZXxEy9ju0QM7usOnKwkvGNL4YAsMcAYcaiZ8ewE_qX8zoa9zTN2p4xnzWlduQ-F3OeHKC9lS2OiQLvo2H_o5XBiskpdsw5d2_5CNbHKfnqxqmQqGveylSzCPX7pIXL8EC_qVrdmoVDxpxBM5EsGL8L8LskuhR76HmRhbRK8frdOpugXw6S7tMBWUEyDRv_3zijpMmIkGMpmDgtWVkai8a8PtZHBHWb7MjUs3KtAduUbFwrjqhlmFP6fdpgIrCXbymrDzE33_nXW4dErrpaLO-w1v7oHDVCFgzpAAUDuzNYsHymaEsa3a2ac9hJRvl7oRJ3HChqeFJXm3nkaEEIPGaMIf1rf6UdHmyQ6hr6G7E3rX5lcdSsh066EiHpC9u0s23FjyvwCD8dETLlLmUsiWgWYmkM1D2NIKRMQ",
  "purpose": "test",
  "use": "sig",
}
`;

exports[`Kryptos (AKP) to should return jwk with public key 1`] = `
{
  "alg": "ML-DSA-65",
  "exp": 4070937600,
  "iat": 1672560000,
  "iss": "https://example.com",
  "jku": "https://example.com/.well-known/jwks.json",
  "key_ops": [
    "sign",
    "verify",
  ],
  "kid": "3b9a051f-e1ec-562b-bf92-7cf92ec465ba",
  "kty": "AKP",
  "nbf": 1672560000,
  "owner_id": "f02c2d0c-44ee-5e4e-8b3b-39d46924d227",
  "pub": "vDKJevgC4bhyW9vmdaFqMWwA7WeFaB3hnqj3traz4R1r4h1yRmzDsK0sH_3pzt3q0zXY1OnrqjNSK7WnMBmu0aCXySyOQj-urITEItYZbIOsZCUsvXjaaYDYrjtCFdJp6WujlVI7wQiC8dGMqVKEL31jX3x59qOnSpARBBXMpTcu_gofkjDsrTMSAMQYOJLRQt9n2_6MUdVb1y94J-LBbIdXxhAhFuu2HR8o4rdqJW5fJXc2ZnOdCvOEKY2AIogKWboHKbIJnG_763P5CCE1RaERwWh-jhypuXaha2bTISi403k3hXgD6PjZxLx_0Z3uuUQtP-yu6Sr0QLtttguIyJvaFIq8ZJ6qlj0u5Y3kYA0YnUOikN3s-c-igPomz8PsVv1-XJQeWu2ZhyIfoi6Tcg9kv1lHjcClhMlO4KJNWU_ExGyrh6ugzo0-erz6vv0WT69ztdC1FkNTQ4gjP2X_7snaSTDgcpbeCk2gWGy5NH2BliLpALSDdZK_5N_YBas0SOEca3sGQ2KDWvK26trrizrrca0Nbfw4zvrj7EE_i2MBfcYrAw5EV9UOZDMsLyPm_H60R3hmCbxQhfaVYiIWlTDLY6NvlREciOsef34iLsz_nr-PXwlxC4oOyBj94qHJauQbgOaPMTLMFa1KZMwTbo0H34ZXAC-3wI6f3vRD6pFl9tJsyozCJQX_vIAp9izJ-610bQHNLe79IU7h_hpU9CrFRi215XguZDQqK8eEFCVeGMms-8n3Tdo5rZcTWF-kmvlucoEiie-FWjg91tCryUpvsMCuKRtd9CuBH3Q5ahukTYgVijga_MAEWYt9sJVveexVC4EjM19_UBKVjdlUjZnormEshSpqk1jAkeL9Iwk8wtyxugj4DN_gTV1L-tLlCijW7c1t9OduomfFkYXe3qg83zYUx1BUuhIUEANbNUoNzaNjxmRqKa4VXQovVfSU6LUuqKy5S7yy_YJDlaEBMSyE6JTtESaTT4TK9g7-4RxWgIZxHoU21cLXo3EgBkTJP1zyaCf5DZ47opvCrrAmtGjJTbOhRH89WpFGFGJu08FeOw0e9YC1GlmJKLMxJgMle2v7ztfWerTD8ss_SeldEfSvWdASwoPf0Ndvklz6RspnfH2CXdA1rA_NJnC-XU7ZkvdNZ5SSRLW5qlCY33xBOSGVbz5kbY58RyJekSTaUgMMkfQZAtCJyUQQcEwAz02d0TKdzusY7hqX8QYPSU_b5FZRLoPY0nWzE6ji14AQJk9ZIPoPH_eXu41Rvp6WJWEnacQ1U_IB6FMKvAPCqFmQotLv_vLcvPSMl-TXWEbS4WQTr7m4dQT0t0Ha8mwGUsM9Nh0OwtGzat2WUjGLgy5my9yVUjcVD5HzhVpD5SvYJCdO1_2tT3k0vsppsoy67sl78sU8PHfxFFZYepNcNNRsd3g4cgYZpraoIUvv02Xv0iZ-ijSJMkeE-Wr19FHvD6za5-IgFBuriwyaIA96X-bFzY-siBIpFDVVxKoi_nYef873TpaPaEV4OzmtliQ8oDa1UD-Ltfz1x6x_J6yRjPDGlAq7Z1EL4i-BdxwntGqaZhhoeJCYIh4BEPMzoGbLo5Ve9Sg50EQkqcIO28A5_m_hUJXyv715UN79KsMCjPQSo6UJZ6lhgVTwETMCLeLfYJJMEPh63DNwyClNBUgdgKtfOVsHohfFBL1IRdk5FgrOUas9Gzgx2ckiNiN3dhgLpfKR4y5XbWcrR9GVEDry791vr7YcV4xDltw5Zc3sdBvT0KxSOs0yiIjHVlr1F-vQnploMAQ-R9nY94fMchEBsNO6wQNiF9tBhfdDyOwuncadUZyxfVokMia2LY_I5_iLMOLTW7U9sJgjSjrcINnBHMarzngZUwTLI3JjVWMGkbZIsU2-gm8ClZng44ZVCaJjDNO02c5CBkVTBhOL7c-PY4x4VnZyDxagGI-G_YSyDti7A1ys6wzX_gbHCGiavYLSNCnSyjLQ7oJnlaLXJAAfdmPh9YRsjOIwGRTgVb8NPsPdZ_E1jM0hBNFpTAbhofR4BQTCwOBWBRL-bqioSb-OgS8wJpFD-l_SSXWLl2Dxx-xquDRMAp-Ia19pS1jZhm6NrYFzVLezU_kf-iGjJ_yzvN8gNM8HYqUrWEqtp0bFItOMNalwWxXCj3y598RLW0HOTFeJITcw6BlRZXxEy9ju0QM7usOnKwkvGNL4YAsMcAYcaiZ8ewE_qX8zoa9zTN2p4xnzWlduQ-F3OeHKC9lS2OiQLvo2H_o5XBiskpdsw5d2_5CNbHKfnqxqmQqGveylSzCPX7pIXL8EC_qVrdmoVDxpxBM5EsGL8L8LskuhR76HmRhbRK8frdOpugXw6S7tMBWUEyDRv_3zijpMmIkGMpmDgtWVkai8a8PtZHBHWb7MjUs3KtAduUbFwrjqhlmFP6fdpgIrCXbymrDzE33_nXW4dErrpaLO-w1v7oHDVCFgzpAAUDuzNYsHymaEsa3a2ac9hJRvl7oRJ3HChqeFJXm3nkaEEIPGaMIf1rf6UdHmyQ6hr6G7E3rX5lcdSsh066EiHpC9u0s23FjyvwCD8dETLlLmUsiWgWYmkM1D2NIKRMQ",
  "purpose": "test",
  "use": "sig",
}
`;

exports[`Kryptos (AKP) to should return kryptos string 1`] = `"Kryptos<AKP:ML-DSA-65:3b9a051f-e1ec-562b-bf92-7cf92ec465ba>"`;
